more string updates

--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -143,8 +143,8 @@
     <string name="action_email">Poslat e-mail</string>
     <string name="btn_just_this_shelf">Pouze tato knihovna</string>
     <string name="action_learn_more">Další informace</string>
-    <string name="btn_less_ellipsis">Méně…</string>
-    <string name="btn_more_ellipsis">Více…</string>
+    <string name="action_less_ellipsis">Méně…</string>
+    <string name="action_more_ellipsis">Více…</string>
     <string name="action_show_options">Možnosti</string>
     <string name="action_show_toc_long">Zobrazit obsah</string>
     <string name="action_start_export">Spusťte export</string>
@@ -283,13 +283,13 @@
     <string name="lbl_backup">Záloha</string>
     <string name="lbl_barcode">čárový kód</string>
     <string name="lbl_book">Kniha</string>
-    <string name="lbl_book_detail_screen">Stránka s podrobnostmi o knize</string>
+    <string name="pc_book_detail_screen">Stránka s podrobnostmi o knize</string>
     <string name="lbl_book_type">Typ knihy</string>
     <string name="lbl_books">Knihy</string>
     <string name="lbl_bookshelf">Knihovna</string>
     <string name="lbl_bookshelves">Zvolte knihovnu</string>
     <string name="lbl_calibre_content_server">Server obsahu Calibre</string>
-    <string name="lbl_calibre_content_server_extension_info">Rozšíření serveru s obsahem kalibru není nainstalováno.</string>
+    <string name="info_calibre_content_server_extension">Rozšíření serveru s obsahem kalibru není nainstalováno.</string>
     <string name="lbl_certificate_ca">Certifikát CA</string>
     <string name="lbl_certificates">Certifikáty</string>
     <string name="X_lbl_clear_filters">Vymazat filtry</string>
@@ -326,7 +326,7 @@
     <string name="lbl_details_have_changed">Podrobnosti se změnily</string>
     <string name="lbl_duplicate_book">Duplicitní kniha</string>
     <string name="lbl_dust_cover">Přebal</string>
-    <string name="lbl_edit_settings">Upravit nastavení</string>
+    <string name="option_storage_edit_settings">Upravit nastavení</string>
     <string name="lbl_edit_style">Upravit styl</string>
     <string name="lbl_edition">Edice</string>
     <string name="lbl_edition_book_club">Kniha Club vydání</string>
@@ -418,11 +418,11 @@
     <string name="option_sort_and_style_ellipsis">Seřadit &amp; Styl…</string>
     <string name="lbl_sorting">Třídění</string>
     <string name="lbl_sql_query">SQL dotaz</string>
-    <string name="lbl_storage_quit_and_reinsert_sdcard">Zavřete aplikaci a vložte správnou SD kartu</string>
+    <string name="option_storage_quit_and_reinsert_sdcard">Zavřete aplikaci a vložte správnou SD kartu</string>
     <string name="option_storage_select">Použijte „%1$s“</string>
     <string name="lbl_storage_settings">Úložiště</string>
-    <string name="lbl_storage_volume">Objem úložiště</string>
-    <string name="lbl_story_in_multiple_books">„%1$s“ je přítomen ve více knihách:\n\n%2$s</string>
+    <string name="pt_storage_volume">Objem úložiště</string>
+    <string name="info_story_in_multiple_books">„%1$s“ je přítomen ve více knihách:\n\n%2$s</string>
     <string name="option_isbn_strict">Přísné ISBN</string>
     <string name="lbl_style">Styl</string>
     <string name="lbl_styles">Styly</string>
@@ -514,7 +514,7 @@
     <string name="pe_ui_theme_day_night">Den / Noc</string>
     <string name="pe_ui_theme_light">Světlo</string>
     <string name="pt_barcode_scanner">Čtečka kódů</string>
-    <string name="pg_bob_show_details">Podrobnosti knihy zobrazené v seznamu</string>
+    <string name="pt_bob_show_details">Podrobnosti knihy zobrazené v seznamu</string>
     <string name="pc_bob">Seznamy knih</string>
     <string name="lbl_filters">Filtry knih</string>
     <string name="pc_image_cache">Obrázky mezipaměti</string>
@@ -523,7 +523,7 @@
     <string name="pt_field_visibility">Spravovat viditelnost jednotlivých polí</string>
     <string name="preference_not_set">Nenastaveno</string>
     <string name="info_backup_successful">Zálohování proběhlo úspěšně</string>
-    <string name="progress_end_download_successful">Stahování bylo úspěšné</string>
+    <string name="info_download_successful">Stahování bylo úspěšné</string>
     <string name="info_export_report">Soubor %3$s nazvaný „%2$s“ byl vytvořen v adresáři „%1$s“ a měli byste jej ručně zkopírovat jinam, aby byla data chráněna v případě poškození, ztráty nebo odcizení zařízení.</string>
     <string name="info_export_successful">Export byl úspěšný</string>
     <string name="info_import_complete">Import byl dokončen</string>
@@ -579,14 +579,14 @@
     <string name="pt_ui_system_locale">Národní prostředí systému</string>
     <string name="pt_ui_theme">Téma</string>
     <string name="pt_website_search_order_and_enable">Změna pořadí, povolení a zakázání</string>
-    <string name="pv_author_name_family_first">tj. „Čapek, Karel“</string>
-    <string name="pv_author_name_given_first">tj. „Karel Čapek“</string>
-    <string name="pv_bob_books_under_multiple_each_author">Pod každým autor</string>
-    <string name="pv_bob_books_under_multiple_each_publisher">pod každým vydavatelem.</string>
-    <string name="pv_bob_books_under_multiple_each_series">Pod každým série</string>
-    <string name="pv_bob_books_under_multiple_primary_author_only">Pouze pod primárním autor</string>
-    <string name="pv_bob_books_under_multiple_primary_publisher_only">pouze pod jejich primárním vydavatelem.</string>
-    <string name="pv_bob_books_under_multiple_primary_series_only">Pouze pod primárním série</string>
+    <string name="ps_author_name_family_first">tj. „Čapek, Karel“</string>
+    <string name="ps_author_name_given_first">tj. „Karel Čapek“</string>
+    <string name="ps_bob_books_under_multiple_each_author">Pod každým autor</string>
+    <string name="ps_bob_books_under_multiple_each_publisher">pod každým vydavatelem.</string>
+    <string name="ps_bob_books_under_multiple_each_series">Pod každým série</string>
+    <string name="ps_bob_books_under_multiple_primary_author_only">Pouze pod primárním autor</string>
+    <string name="ps_bob_books_under_multiple_primary_publisher_only">pouze pod jejich primárním vydavatelem.</string>
+    <string name="ps_bob_books_under_multiple_primary_series_only">Pouze pod primárním série</string>
     <string name="pv_bob_header_filters">Filtry knih</string>
     <string name="pv_bob_header_nr_of_books">Počet knih</string>
     <string name="pv_bob_header_style_name">Název stylu</string>
@@ -624,20 +624,20 @@
     <string name="tip_series_book_may_appear_more_than_once">Při zobrazení pod každou sérií se může stát, že jedna kniha se objeví v seznamu vícekrát - pokud však v takovém případě odstraníte kterýkoli z těchto záznamů, budou odstraněny všechny.</string>
     <string name="tip_update_fields_from_internet">Externí odkazy na stránky jsou zpracovány pouze v případě, že je web skutečně kontaktován. Výsledkem je, že nabídka „Výhled na…“ také ukáže pouze to, co je k dispozici.</string>
     <string name="tip_view_only_help">Můžete posouvat doleva nebo doprava a přejít k dalším knihám.</string>
-    <string name="txt_cleanup_files">Dočasné soubory momentálně zabírají %1$s na SD kartě. Logovací soubory a další data jsou ukládána na SD kartu při každé aktualizaci, při zálohování databáze, nebo při pádu aplikace. Stiskněte tlačítko níže pro odstranění těchto dat. Pokud jste se však v minulosti setkal s pádem aplikace, nebo dalšími problémy při jejím používání, uvažujte prosím nejprve o zaslání těchto informací prostřednictvím tlačítka „%2$s“.</string>
-    <string name="txt_displaying_n_books_in_m_entries">%1$d knih ve heslech %2$d</string>
-    <string name="txt_export_backup_all">Všechny knihy, obaly, předvolby a vlastní styly budou exportovány do archivu.</string>
-    <string name="txt_export_books_option_since_last_full_backup">Všechny knihy byly přidány nebo aktualizovány od poslední úplné zálohy.</string>
+    <string name="info_cleanup_files">Dočasné soubory momentálně zabírají %1$s na SD kartě. Logovací soubory a další data jsou ukládána na SD kartu při každé aktualizaci, při zálohování databáze, nebo při pádu aplikace. Stiskněte tlačítko níže pro odstranění těchto dat. Pokud jste se však v minulosti setkal s pádem aplikace, nebo dalšími problémy při jejím používání, uvažujte prosím nejprve o zaslání těchto informací prostřednictvím tlačítka „%2$s“.</string>
+    <string name="info_displaying_n_books_in_m_entries">%1$d knih ve heslech %2$d</string>
+    <string name="info_export_backup_all">Všechny knihy, obaly, předvolby a vlastní styly budou exportovány do archivu.</string>
+    <string name="info_export_books_option_since_last_full_backup">Všechny knihy byly přidány nebo aktualizovány od poslední úplné zálohy.</string>
     <string name="option_info_import_books_option_all">Importujte nové knihy a přepište existující knihy. Použijte k obnovení zálohy.</string>
     <string name="option_info_import_books_option_new_and_updated">Importujte nové knihy a synchronizujte existující knihy na základě data jejich poslední úpravy.</string>
     <string name="option_info_import_books_option_new_only">Importujte pouze nové knihy. Všechny aktualizace existujících knih budou ignorovány.</string>
     <string name="ps_manage_fields">Vybraná pole jsou viditelná na obrazovce pro přidání/úpravu knihy. Nevybraná pole jsou skryta.</string>
-    <string name="txt_rebuild_scheduled">Přestavba naplánována</string>
-    <string name="txt_select_fields_to_update">Vybraná pole budou aktualizována automaticky z internetu. Nevybraná pole zůstanou beze změny.</string>
-    <string name="txt_share_book_im_reading">Čtu „%1$s“ %2$s o %3$s %4$s</string>
-    <string name="txt_tap_on_image_to_select">Klepnutím na větší obrázek jej vyberte.</string>
-    <string name="txt_tap_on_thumbnail_to_zoom">Pro zobrazení většího obrázku klikněte na náhled</string>
-    <string name="txt_x_pages">%1$d stran</string>
+    <string name="info_rebuild_scheduled">Přestavba naplánována</string>
+    <string name="info_select_fields_to_update">Vybraná pole budou aktualizována automaticky z internetu. Nevybraná pole zůstanou beze změny.</string>
+    <string name="info_share_book_im_reading">Čtu „%1$s“ %2$s o %3$s %4$s</string>
+    <string name="info_tap_on_image_to_select">Klepnutím na větší obrázek jej vyberte.</string>
+    <string name="info_tap_on_thumbnail_to_zoom">Pro zobrazení většího obrázku klikněte na náhled</string>
+    <string name="info_x_pages">%1$d stran</string>
     <string name="unknown">Neznámé</string>
     <string name="unknown_author">[Neznámý autor]</string>
     <string name="unknown_title">[Neznámý název]</string>
@@ -685,7 +685,7 @@
     <string name="whichViewApplication">Otevřít v aplikaci</string>
     <string name="x_of_y">%1$d z %2$d</string>
     <string name="yes">Ano</string>
-    <string name="lbl_story_in_single_book">„%1$s“ se nachází v jedné knize:\n\n%2$s</string>
+    <string name="info_story_in_single_book">„%1$s“ se nachází v jedné knize:\n\n%2$s</string>
     <string name="tip_import_isbn_list">Importujte textový soubor s čísly ISBN. Soubor by měl mít na každém řádku jedno ISBN. Výsledky budou zařazeny do fronty.</string>
     <string name="lbl_date_added">Datum přidání</string>
 
