--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -144,8 +144,8 @@
     <string name="action_email">E-Mail senden</string>
     <string name="btn_just_this_shelf">Nur dieses Bücherregal</string>
     <string name="action_learn_more">Weitere Informationen</string>
-    <string name="btn_less_ellipsis">Weniger…</string>
-    <string name="btn_more_ellipsis">Mehr…</string>
+    <string name="action_less_ellipsis">Weniger…</string>
+    <string name="action_more_ellipsis">Mehr…</string>
     <string name="action_show_options">Optionen</string>
     <string name="action_show_toc_long">Inhaltsverzeichnis anzeigen</string>
     <string name="action_start_export">Export starten</string>
@@ -284,13 +284,13 @@
     <string name="lbl_backup">Sicherungskopie</string>
     <string name="lbl_barcode">Barcode</string>
     <string name="lbl_book">Buch</string>
-    <string name="lbl_book_detail_screen">Seite mit den Buchdetails</string>
+    <string name="pc_book_detail_screen">Seite mit den Buchdetails</string>
     <string name="lbl_book_type">Buchart</string>
     <string name="lbl_books">Bücher</string>
     <string name="lbl_bookshelf">Bücherregal</string>
     <string name="lbl_bookshelves">Bücherregale</string>
     <string name="lbl_calibre_content_server">Calibre inhaltsserver</string>
-    <string name="lbl_calibre_content_server_extension_info">Die Calibre-Inhaltsservererweiterung ist nicht installiert.</string>
+    <string name="info_calibre_content_server_extension">Die Calibre-Inhaltsservererweiterung ist nicht installiert.</string>
     <string name="lbl_certificate_ca">CA-Zertifikat</string>
     <string name="lbl_certificates">Zertifikate</string>
     <string name="X_lbl_clear_filters">Filter löschen</string>
@@ -327,7 +327,7 @@
     <string name="lbl_details_have_changed">Details wurden geändert</string>
     <string name="lbl_duplicate_book">Duplizieren Sie das Buch</string>
     <string name="lbl_dust_cover">Schutzumschlag</string>
-    <string name="lbl_edit_settings">Einstellungen bearbeiten</string>
+    <string name="option_storage_edit_settings">Einstellungen bearbeiten</string>
     <string name="lbl_edit_style">Bearbeite Stil</string>
     <string name="lbl_edition">Auflage</string>
     <string name="lbl_edition_book_club">Buchclub Edition</string>
@@ -419,11 +419,11 @@
     <string name="option_sort_and_style_ellipsis">Sortierung und Stil…</string>
     <string name="lbl_sorting">Sortierung</string>
     <string name="lbl_sql_query">SQL-Abfrage</string>
-    <string name="lbl_storage_quit_and_reinsert_sdcard">Schließen Sie die App und legen Sie die richtige SD-Karte ein</string>
+    <string name="option_storage_quit_and_reinsert_sdcard">Schließen Sie die App und legen Sie die richtige SD-Karte ein</string>
     <string name="option_storage_select">Verwende „%1$s“</string>
     <string name="lbl_storage_settings">Speicher</string>
-    <string name="lbl_storage_volume">Speichervolumen</string>
-    <string name="lbl_story_in_multiple_books">„%1$s“ ist in mehreren Büchern vorhanden:\n\n%2$s</string>
+    <string name="pt_storage_volume">Speichervolumen</string>
+    <string name="info_story_in_multiple_books">„%1$s“ ist in mehreren Büchern vorhanden:\n\n%2$s</string>
     <string name="option_isbn_strict">Strikte ISBN</string>
     <string name="lbl_style">Stil</string>
     <string name="lbl_styles">Stile</string>
@@ -515,7 +515,7 @@
     <string name="pe_ui_theme_day_night">Tag / Nacht</string>
     <string name="pe_ui_theme_light">Licht</string>
     <string name="pt_barcode_scanner">Barcodelesegerät</string>
-    <string name="pg_bob_show_details">In der Liste angezeigte Buchdetails</string>
+    <string name="pt_bob_show_details">In der Liste angezeigte Buchdetails</string>
     <string name="pc_bob">Buchlisten</string>
     <string name="lbl_filters">Buchfilter</string>
     <string name="pc_image_cache">Bilder-Cache</string>
@@ -524,7 +524,7 @@
     <string name="pt_field_visibility">Feld Sichtbarkeit bearbeiten</string>
     <string name="preference_not_set">Nicht festgelegt</string>
     <string name="info_backup_successful">Sicherungskopie erfolgreich erstellt</string>
-    <string name="progress_end_download_successful">Herunterladen erfolgreich</string>
+    <string name="info_download_successful">Herunterladen erfolgreich</string>
     <string name="info_export_report">Eine %3$s-Datei namens %2$s wurde im Verzeichnis „%1$s“ erzeugt.\n\nSie sollten diese Datei händisch an einen sicheren Ort kopieren, um Ihre Daten vor Beschädigung, Verlust oder Diebstahl zu schützen.</string>
     <string name="info_export_successful">Export erfolgreich</string>
     <string name="info_import_complete">Import vollständig</string>
@@ -582,14 +582,14 @@
     <string name="pt_ui_system_locale">System Locale</string>
     <string name="pt_ui_theme">Thema</string>
     <string name="pt_website_search_order_and_enable">Neu anordnen, aktivieren und deaktivieren</string>
-    <string name="pv_author_name_family_first">z.B. „Kafka, Franz“</string>
-    <string name="pv_author_name_given_first">z.B. „Franz  Kafka“</string>
-    <string name="pv_bob_books_under_multiple_each_author">Unter jedem Autor</string>
-    <string name="pv_bob_books_under_multiple_each_publisher">unter jedem Verlag.</string>
-    <string name="pv_bob_books_under_multiple_each_series">Unter jedem Serie</string>
-    <string name="pv_bob_books_under_multiple_primary_author_only">Nur unter primärem Autor</string>
-    <string name="pv_bob_books_under_multiple_primary_publisher_only">nur unter ihrem Hauptverleger.</string>
-    <string name="pv_bob_books_under_multiple_primary_series_only">Nur unter primärem Serie</string>
+    <string name="ps_author_name_family_first">z.B. „Kafka, Franz“</string>
+    <string name="ps_author_name_given_first">z.B. „Franz  Kafka“</string>
+    <string name="ps_bob_books_under_multiple_each_author">Unter jedem Autor</string>
+    <string name="ps_bob_books_under_multiple_each_publisher">unter jedem Verlag.</string>
+    <string name="ps_bob_books_under_multiple_each_series">Unter jedem Serie</string>
+    <string name="ps_bob_books_under_multiple_primary_author_only">Nur unter primärem Autor</string>
+    <string name="ps_bob_books_under_multiple_primary_publisher_only">nur unter ihrem Hauptverleger.</string>
+    <string name="ps_bob_books_under_multiple_primary_series_only">Nur unter primärem Serie</string>
     <string name="pv_bob_header_filters">Buchfilter</string>
     <string name="pv_bob_header_nr_of_books">Anzahl der Bücher anzeigen</string>
     <string name="pv_bob_header_style_name">Stilname</string>
@@ -627,20 +627,20 @@
     <string name="tip_series_book_may_appear_more_than_once">Ein Buch kann mehrfach in einer Liste erscheinen, wenn es bei jeder Serie angezeigt wird. In diesem Fall führt das Löschen eines Buchs zum Löschen aller Vorkommen von der Liste.</string>
     <string name="tip_update_fields_from_internet">Externe Site-Links werden nur verarbeitet, wenn die Site tatsächlich kontaktiert wird. Infolgedessen zeigt das Menü „Anschauen auf…“ ebenfalls nur, was verfügbar ist.</string>
     <string name="tip_view_only_help">Sie können nach links oder rechts wischen, um zu anderen Büchern zu wechseln</string>
-    <string name="txt_cleanup_files">Die Dateien belegen %1$s Speicherplatz auf der SD-Karte. Log-Dateien und andere Daten werden bei jeder App-Aktualisierung, Sicherungskopie oder wenn die App abstürzt auf der SD-Karte gespeichert. Klicken Sie den Knopf unten, um diese Dateien von der SD-Karte zu entfernen. Wenn Sie Abstürze oder andere Fehler erhalten, ziehen Sie bitte in Betracht, den „%2$s“ Knopf zuerst zu benutzen.</string>
-    <string name="txt_displaying_n_books_in_m_entries">%1$d Bücher in %2$d Einträgen</string>
-    <string name="txt_export_backup_all">Alle Bücher, Buchumschläge, Einstellungen und benutzerdefinierten Stile werden in das Archiv exportiert.</string>
-    <string name="txt_export_books_option_since_last_full_backup">Alle neuen und aktualisierten Bücher seit der letzten vollständigen Sicherung</string>
+    <string name="info_cleanup_files">Die Dateien belegen %1$s Speicherplatz auf der SD-Karte. Log-Dateien und andere Daten werden bei jeder App-Aktualisierung, Sicherungskopie oder wenn die App abstürzt auf der SD-Karte gespeichert. Klicken Sie den Knopf unten, um diese Dateien von der SD-Karte zu entfernen. Wenn Sie Abstürze oder andere Fehler erhalten, ziehen Sie bitte in Betracht, den „%2$s“ Knopf zuerst zu benutzen.</string>
+    <string name="info_displaying_n_books_in_m_entries">%1$d Bücher in %2$d Einträgen</string>
+    <string name="info_export_backup_all">Alle Bücher, Buchumschläge, Einstellungen und benutzerdefinierten Stile werden in das Archiv exportiert.</string>
+    <string name="info_export_books_option_since_last_full_backup">Alle neuen und aktualisierten Bücher seit der letzten vollständigen Sicherung</string>
     <string name="option_info_import_books_option_all">Importieren Sie neue Bücher und überschreiben Sie vorhandene Bücher. Verwenden Sie diese Option, um eine Sicherung wiederherzustellen.</string>
     <string name="option_info_import_books_option_new_and_updated">Importieren Sie neue Bücher und synchronisieren Sie vorhandene Bücher basierend auf ihrem letzten Änderungsdatum.</string>
     <string name="option_info_import_books_option_new_only">Importieren Sie nur neue Bücher. Aktualisierungen vorhandener Bücher werden ignoriert.</string>
     <string name="ps_manage_fields">Die ausgewählten Felder werden im Bildschirm Buch hinzufügen/bearbeiten angezeigt. Nicht ausgewählte Felder werden nicht angezeigt.</string>
-    <string name="txt_rebuild_scheduled">Wiederaufbau geplant</string>
-    <string name="txt_select_fields_to_update">Die ausgewählten Felder werden aus dem Internet aktualisiert. Nicht ausgewählte Felder werden nicht geändert.</string>
-    <string name="txt_share_book_im_reading">Ich lese „%1$s“ %2$s von %3$s %4$s</string>
-    <string name="txt_tap_on_image_to_select">Tippen Sie auf das größere Bild, um es auszuwählen.</string>
-    <string name="txt_tap_on_thumbnail_to_zoom">Tippen Sie auf eine Vorschaubild, um ein größeres Bild anzuzeigen.</string>
-    <string name="txt_x_pages">%1$d seiten</string>
+    <string name="info_rebuild_scheduled">Wiederaufbau geplant</string>
+    <string name="info_select_fields_to_update">Die ausgewählten Felder werden aus dem Internet aktualisiert. Nicht ausgewählte Felder werden nicht geändert.</string>
+    <string name="info_share_book_im_reading">Ich lese „%1$s“ %2$s von %3$s %4$s</string>
+    <string name="info_tap_on_image_to_select">Tippen Sie auf das größere Bild, um es auszuwählen.</string>
+    <string name="info_tap_on_thumbnail_to_zoom">Tippen Sie auf eine Vorschaubild, um ein größeres Bild anzuzeigen.</string>
+    <string name="info_x_pages">%1$d seiten</string>
     <string name="unknown">Unbekannt</string>
     <string name="unknown_author">[Unbekannter Autor]</string>
     <string name="unknown_title">[Unbekannter Titel]</string>
@@ -688,7 +688,7 @@
     <string name="whichViewApplication">Öffnen mit</string>
     <string name="x_of_y">%1$d von %2$d</string>
     <string name="yes">Ja</string>
-    <string name="lbl_story_in_single_book">„%1$s“ ist in einem einzigen Buch vorhanden:\n\n%2$s</string>
+    <string name="info_story_in_single_book">„%1$s“ ist in einem einzigen Buch vorhanden:\n\n%2$s</string>
     <string name="tip_import_isbn_list">Importieren Sie eine Textdatei mit ISBN-Nummern. Die Datei sollte in jeder Zeile eine einzige ISBN haben. Die Ergebnisse werden in die Warteschlange gestellt.</string>
     <string name="lbl_date_added">Erfassungsdatum</string>
 
