--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -144,8 +144,8 @@
     <string name="action_email">Ηλεκτρονικό ταχυδρομείο</string>
     <string name="btn_just_this_shelf">Μόνο αυτό το ράφι βιβλίου</string>
     <string name="action_learn_more">Μάθετε περισσότερα</string>
-    <string name="btn_less_ellipsis">Πιο λιγο…</string>
-    <string name="btn_more_ellipsis">Περισσότερο…</string>
+    <string name="action_less_ellipsis">Πιο λιγο…</string>
+    <string name="action_more_ellipsis">Περισσότερο…</string>
     <string name="action_show_options">Επιλογές</string>
     <string name="action_show_toc_long">Εμφάνιση Πίνακα Περιεχομένων</string>
     <string name="action_start_export">Έναρξη εξαγωγής</string>
@@ -284,13 +284,13 @@
     <string name="lbl_backup">Αντιγράφων ασφαλείας</string>
     <string name="lbl_barcode">Barcode</string>
     <string name="lbl_book">Βιβλίο</string>
-    <string name="lbl_book_detail_screen">Σελίδα λεπτομερειών βιβλίου</string>
+    <string name="pc_book_detail_screen">Σελίδα λεπτομερειών βιβλίου</string>
     <string name="lbl_book_type">Τύπος βιβλίου</string>
     <string name="lbl_books">Βιβλία</string>
     <string name="lbl_bookshelf">Βιβλιοθήκης</string>
     <string name="lbl_bookshelves">Ράφια Βιβλιοθήκης</string>
     <string name="lbl_calibre_content_server">Διακομιστής περιεχομένου Calibre</string>
-    <string name="lbl_calibre_content_server_extension_info">Η επέκταση διακομιστή περιεχομένου Caliber δεν έχει εγκατασταθεί.</string>
+    <string name="info_calibre_content_server_extension">Η επέκταση διακομιστή περιεχομένου Caliber δεν έχει εγκατασταθεί.</string>
     <string name="lbl_certificate_ca">Πιστοποιητικό CA</string>
     <string name="lbl_certificates">πιστοποιητικών</string>
     <string name="X_lbl_clear_filters">Διαγραφή φίλτρων</string>
@@ -327,7 +327,7 @@
     <string name="lbl_details_have_changed">Κάποιες λεπτομέρειες έχουν αλλάξει</string>
     <string name="lbl_duplicate_book">Διπλοεγγραφή Βιβλίου</string>
     <string name="lbl_dust_cover">Σκουπάκι σκόνης</string>
-    <string name="lbl_edit_settings">Επεξεργασία ρυθμίσεων</string>
+    <string name="option_storage_edit_settings">Επεξεργασία ρυθμίσεων</string>
     <string name="lbl_edit_style">Επεξεργασία στυλ</string>
     <string name="lbl_edition">Εκδοση</string>
     <string name="lbl_edition_book_club">Έκδοση Βιβλίου Club</string>
@@ -419,11 +419,11 @@
     <string name="option_sort_and_style_ellipsis">Ταξινόμηση &amp; Στυλ…</string>
     <string name="lbl_sorting">Ταξινόμηση</string>
     <string name="lbl_sql_query">Ερώτημα SQL</string>
-    <string name="lbl_storage_quit_and_reinsert_sdcard">Κλείστε την εφαρμογή και τοποθετήστε τη σωστή κάρτα SD</string>
+    <string name="option_storage_quit_and_reinsert_sdcard">Κλείστε την εφαρμογή και τοποθετήστε τη σωστή κάρτα SD</string>
     <string name="option_storage_select">Χρησιμοποιήστε «%1$s»</string>
     <string name="lbl_storage_settings">Αποθηκευτικός χώρος</string>
-    <string name="lbl_storage_volume">Όγκος αποθήκευσης</string>
-    <string name="lbl_story_in_multiple_books">«%1$s» υπάρχει σε πολλά βιβλία:\n\n%2$s</string>
+    <string name="pt_storage_volume">Όγκος αποθήκευσης</string>
+    <string name="info_story_in_multiple_books">«%1$s» υπάρχει σε πολλά βιβλία:\n\n%2$s</string>
     <string name="option_isbn_strict">Αυστηρό ISBN</string>
     <string name="lbl_style">Στυλ</string>
     <string name="lbl_styles">στυλ</string>
@@ -515,7 +515,7 @@
     <string name="pe_ui_theme_day_night">Ημέρα / Νύχτα</string>
     <string name="pe_ui_theme_light">Φως</string>
     <string name="pt_barcode_scanner">Σάρωση γραμμοκώδικα</string>
-    <string name="pg_bob_show_details">Λεπτομέρειες βιβλίου εμφανίζονται στη λίστα</string>
+    <string name="pt_bob_show_details">Λεπτομέρειες βιβλίου εμφανίζονται στη λίστα</string>
     <string name="pc_bob">Λίστα βιβλίων</string>
     <string name="lbl_filters">Φίλτρα Βιβλίων</string>
     <string name="pc_image_cache">Cache εικόνας</string>
@@ -524,7 +524,7 @@
     <string name="pt_field_visibility">Διαχείρηση ορατότητας πεδίου</string>
     <string name="preference_not_set">Δεν έχει οριστεί</string>
     <string name="info_backup_successful">Η δημιουργία αντιγράφων ασφαλείας ήταν επιτυχής</string>
-    <string name="progress_end_download_successful">Η λήψη ήταν επιτυχής</string>
+    <string name="info_download_successful">Η λήψη ήταν επιτυχής</string>
     <string name="info_export_report">;Ένα αρχείο %3$s με το όνομα %2$s δημιουργήθηκε στον κατάλογο «%1$s».\n\nΜπορείτε το αντιγράψετε κάπου αλλού για να προστατέψετε τα δεδομένα σε περίπτωση που η συσκευή σας πάθει ζημιά, χαθεί, ή κλαπεί.</string>
     <string name="info_export_successful">Η εξαγωγή ήταν επιτυχής</string>
     <string name="info_import_complete">Εισαγωγή Ολοκληρώθηκε</string>
@@ -582,14 +582,14 @@
     <string name="pt_ui_system_locale">Τοπικό σύστημα</string>
     <string name="pt_ui_theme">Θέμα</string>
     <string name="pt_website_search_order_and_enable">Αναδιάταξη, ενεργοποίηση και απενεργοποίηση</string>
-    <string name="pv_author_name_family_first">για παράδειγμα «Παλαμάς, Κωστής»</string>
-    <string name="pv_author_name_given_first">για παράδειγμα «Κωστής  Παλαμάς»</string>
-    <string name="pv_bob_books_under_multiple_each_author">Κάτω από κάθε συντάκτης</string>
-    <string name="pv_bob_books_under_multiple_each_publisher">κάτω από κάθε εκδότη.</string>
-    <string name="pv_bob_books_under_multiple_each_series">Κάτω από κάθε Σειρά</string>
-    <string name="pv_bob_books_under_multiple_primary_author_only">Κάτω από κύρια συντάκτης μόνο</string>
-    <string name="pv_bob_books_under_multiple_primary_publisher_only">μόνο στον κύριο εκδότη τους.</string>
-    <string name="pv_bob_books_under_multiple_primary_series_only">Κάτω από κύρια Σειρά μόνο</string>
+    <string name="ps_author_name_family_first">για παράδειγμα «Παλαμάς, Κωστής»</string>
+    <string name="ps_author_name_given_first">για παράδειγμα «Κωστής  Παλαμάς»</string>
+    <string name="ps_bob_books_under_multiple_each_author">Κάτω από κάθε συντάκτης</string>
+    <string name="ps_bob_books_under_multiple_each_publisher">κάτω από κάθε εκδότη.</string>
+    <string name="ps_bob_books_under_multiple_each_series">Κάτω από κάθε Σειρά</string>
+    <string name="ps_bob_books_under_multiple_primary_author_only">Κάτω από κύρια συντάκτης μόνο</string>
+    <string name="ps_bob_books_under_multiple_primary_publisher_only">μόνο στον κύριο εκδότη τους.</string>
+    <string name="ps_bob_books_under_multiple_primary_series_only">Κάτω από κύρια Σειρά μόνο</string>
     <string name="pv_bob_header_filters">Φίλτρα Βιβλίων</string>
     <string name="pv_bob_header_nr_of_books">Εμφάνιση αριθμού βιβλίων</string>
     <string name="pv_bob_header_style_name">Όνομα στυλ</string>
@@ -627,20 +627,20 @@
     <string name="tip_series_book_may_appear_more_than_once">Αν εμφανίζεται για κάθε σειρά, ένα βιβλίο μπορεί να εμφανίζεται πολλές φορές σε μια λίστα. Τότε, αν διαγραφεί ένα από αυτά, θα διαγραφούν όλα από τη λίστα.</string>
     <string name="tip_update_fields_from_internet">Οι εξωτερικοί σύνδεσμοι ιστότοπου υποβάλλονται σε επεξεργασία μόνο αν ο ιστότοπος επικοινωνεί πραγματικά. Ως εκ τούτου, το μενού «Προβολή στο…» θα δείξει και ό, τι είναι διαθέσιμο.</string>
     <string name="tip_view_only_help">Μπορείτε να σύρετε αριστερά ή δεξιά την οθόνη, για να πάτε σε άλλα βιβλία.</string>
-    <string name="txt_cleanup_files">Τα προσωρινά αρχεία χρησιμοποιούν %1$s στην κάρτα SD. Αρχεία καταγραφής και άλλων δεδομένων αποθηκεύονται στην κάρτα SD σε κάθε ενημέρωση, όταν γινονται αντίγραφα ασφαλείας της βάσης δεδομένων και όταν η εφαρμογή σταματάει να λειτουργεί. Πατήστε το παρακάτω κουμπί για να καθαρίσετε αυτά τα αρχεία από την κάρτα SD. Εαν αντιμετωπίζετε διακοπές λειτουργίας ή άλλα σφάλματα, παρακαλούμε σκεφτείτε να πατήσετε πρώτα το κουμπί «%2$s».</string>
-    <string name="txt_displaying_n_books_in_m_entries">%1$d βιβλία, σε %2$d καταχωρήσεις</string>
-    <string name="txt_export_backup_all">Όλα τα βιβλία, εξώφυλλα, ρυθμίσεις και προσαρμοσμένα στυλ θα εξαχθούν στο Αρχείο.</string>
-    <string name="txt_export_books_option_since_last_full_backup">Όλα τα βιβλία που προστέθηκαν ή ενημερώθηκαν από το τελευταίο πλήρες αντίγραφο ασφαλείας</string>
+    <string name="info_cleanup_files">Τα προσωρινά αρχεία χρησιμοποιούν %1$s στην κάρτα SD. Αρχεία καταγραφής και άλλων δεδομένων αποθηκεύονται στην κάρτα SD σε κάθε ενημέρωση, όταν γινονται αντίγραφα ασφαλείας της βάσης δεδομένων και όταν η εφαρμογή σταματάει να λειτουργεί. Πατήστε το παρακάτω κουμπί για να καθαρίσετε αυτά τα αρχεία από την κάρτα SD. Εαν αντιμετωπίζετε διακοπές λειτουργίας ή άλλα σφάλματα, παρακαλούμε σκεφτείτε να πατήσετε πρώτα το κουμπί «%2$s».</string>
+    <string name="info_displaying_n_books_in_m_entries">%1$d βιβλία, σε %2$d καταχωρήσεις</string>
+    <string name="info_export_backup_all">Όλα τα βιβλία, εξώφυλλα, ρυθμίσεις και προσαρμοσμένα στυλ θα εξαχθούν στο Αρχείο.</string>
+    <string name="info_export_books_option_since_last_full_backup">Όλα τα βιβλία που προστέθηκαν ή ενημερώθηκαν από το τελευταίο πλήρες αντίγραφο ασφαλείας</string>
     <string name="option_info_import_books_option_all">Εισαγάγετε νέα βιβλία και αντικαταστήστε τα υπάρχοντα βιβλία. Χρησιμοποιήστε αυτό για την επαναφορά ενός αντιγράφου ασφαλείας.</string>
     <string name="option_info_import_books_option_new_and_updated">Εισαγάγετε νέα βιβλία και συγχρονίστε υπάρχοντα βιβλία με βάση την τελευταία ημερομηνία τροποποίησής τους.</string>
     <string name="option_info_import_books_option_new_only">Εισαγωγή μόνο νέων βιβλίων. Τυχόν ενημερώσεις σε υπάρχοντα βιβλία θα αγνοηθούν.</string>
     <string name="ps_manage_fields">Τα επιλεγμένα πεδία είναι ορατά στις οθόνες προσθήκης/επεξεργασίας βιβλίου. Τα μη επιλεγμένα πεδία είναι κρυφά.</string>
-    <string name="txt_rebuild_scheduled">Ανακατασκευή προγραμματισμένη</string>
-    <string name="txt_select_fields_to_update">Τα επιλεγμένα πεδία θα ενημερωθούν από το διαδίκτυο. Τα μη επιλεγμένα θα μείνουν ως έχει.</string>
-    <string name="txt_share_book_im_reading">Διαβάζω «%1$s» %2$s από %3$s %4$s</string>
-    <string name="txt_tap_on_image_to_select">Πατήστε στη μεγαλύτερη εικόνα για να την επιλέξετε.</string>
-    <string name="txt_tap_on_thumbnail_to_zoom">Κάντε κλικ στη μικρογραφία για να δείτε μια μεγαλύτερη εικόνα.</string>
-    <string name="txt_x_pages">%1$d σελίδες</string>
+    <string name="info_rebuild_scheduled">Ανακατασκευή προγραμματισμένη</string>
+    <string name="info_select_fields_to_update">Τα επιλεγμένα πεδία θα ενημερωθούν από το διαδίκτυο. Τα μη επιλεγμένα θα μείνουν ως έχει.</string>
+    <string name="info_share_book_im_reading">Διαβάζω «%1$s» %2$s από %3$s %4$s</string>
+    <string name="info_tap_on_image_to_select">Πατήστε στη μεγαλύτερη εικόνα για να την επιλέξετε.</string>
+    <string name="info_tap_on_thumbnail_to_zoom">Κάντε κλικ στη μικρογραφία για να δείτε μια μεγαλύτερη εικόνα.</string>
+    <string name="info_x_pages">%1$d σελίδες</string>
     <string name="unknown">Άγνωστο</string>
     <string name="unknown_author">[Άγνωστος συγγραφέας]</string>
     <string name="unknown_title">[Άγνωστος τίτλος]</string>
@@ -688,7 +688,7 @@
     <string name="whichViewApplication">Άνοιγμα με</string>
     <string name="x_of_y">%1$d από %2$d</string>
     <string name="yes">Ναι</string>
-    <string name="lbl_story_in_single_book">Το «%1$s» υπάρχει σε ένα μόνο βιβλίο:\n\n%2$s</string>
+    <string name="info_story_in_single_book">Το «%1$s» υπάρχει σε ένα μόνο βιβλίο:\n\n%2$s</string>
     <string name="tip_import_isbn_list">Εισαγάγετε ένα αρχείο κειμένου με αριθμούς ISBN. Το αρχείο θα πρέπει να έχει ένα μόνο ISBN σε κάθε γραμμή. Τα αποτελέσματα θα τοποθετηθούν στην ουρά.</string>
     <string name="lbl_date_added">Ημερομηνία προσθήκης</string>
 
