--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -146,8 +146,8 @@
     <string name="action_email">Envoyer un e-mail</string>
     <string name="btn_just_this_shelf">Cette bibliothèque uniquement</string>
     <string name="action_learn_more">En savoir plus</string>
-    <string name="btn_less_ellipsis">Moins…</string>
-    <string name="btn_more_ellipsis">Plus…</string>
+    <string name="action_less_ellipsis">Moins…</string>
+    <string name="action_more_ellipsis">Plus…</string>
     <string name="action_show_options">Options</string>
     <string name="action_show_toc_long">Afficher la table des matières</string>
     <string name="action_start_export">Démarrer l\'exportation</string>
@@ -286,13 +286,13 @@
     <string name="lbl_backup">Sauvegarder</string>
     <string name="lbl_barcode">code à barre</string>
     <string name="lbl_book">Livre</string>
-    <string name="lbl_book_detail_screen">Page de détails du livre</string>
+    <string name="pc_book_detail_screen">Page de détails du livre</string>
     <string name="lbl_book_type">Type de livre</string>
     <string name="lbl_books">Livres</string>
     <string name="lbl_bookshelf">Bibliothèque</string>
     <string name="lbl_bookshelves">Bibliothèques</string>
     <string name="lbl_calibre_content_server">Serveur de contenu Calibre</string>
-    <string name="lbl_calibre_content_server_extension_info">L\'extension du serveur de contenu Calibre n\'est pas installée.</string>
+    <string name="info_calibre_content_server_extension">L\'extension du serveur de contenu Calibre n\'est pas installée.</string>
     <string name="lbl_certificate_ca">Certificat CA</string>
     <string name="lbl_certificates">Certificats</string>
     <string name="X_lbl_clear_filters">Effacer les filtres</string>
@@ -329,7 +329,7 @@
     <string name="lbl_details_have_changed">Modification en cours</string>
     <string name="lbl_duplicate_book">Dupliquer le livre</string>
     <string name="lbl_dust_cover">Jaquette</string>
-    <string name="lbl_edit_settings">Modifier les paramètres</string>
+    <string name="option_storage_edit_settings">Modifier les paramètres</string>
     <string name="lbl_edit_style">Modifier le style</string>
     <string name="lbl_edition">Édition</string>
     <string name="lbl_edition_book_club">Édition du club de lecture</string>
@@ -421,11 +421,11 @@
     <string name="option_sort_and_style_ellipsis">Tri &amp; style…</string>
     <string name="lbl_sorting">Tri</string>
     <string name="lbl_sql_query">Requête SQL</string>
-    <string name="lbl_storage_quit_and_reinsert_sdcard">Quittez et réinsérez la bonne carte SD</string>
+    <string name="option_storage_quit_and_reinsert_sdcard">Quittez et réinsérez la bonne carte SD</string>
     <string name="option_storage_select">Utiliser «%1$s»</string>
     <string name="lbl_storage_settings">Stockage</string>
-    <string name="lbl_storage_volume">Volume de stockage</string>
-    <string name="lbl_story_in_multiple_books">«%1$s» est présente dans plusieurs livres :\n\n%2$s</string>
+    <string name="pt_storage_volume">Volume de stockage</string>
+    <string name="info_story_in_multiple_books">«%1$s» est présente dans plusieurs livres :\n\n%2$s</string>
     <string name="option_isbn_strict">ISBN strict</string>
     <string name="lbl_style">Style</string>
     <string name="lbl_styles">Les styles</string>
@@ -517,7 +517,7 @@
     <string name="pe_ui_theme_day_night">Jour / Nuit</string>
     <string name="pe_ui_theme_light">Clair</string>
     <string name="pt_barcode_scanner">Scanner de code à barres</string>
-    <string name="pg_bob_show_details">Détails du livre affichés dans la liste</string>
+    <string name="pt_bob_show_details">Détails du livre affichés dans la liste</string>
     <string name="pc_bob">Listes de livres</string>
     <string name="lbl_filters">Filtres de livres</string>
     <string name="pc_image_cache">Cache d\'images</string>
@@ -526,7 +526,7 @@
     <string name="pt_field_visibility">Gérer la visibilité des champs</string>
     <string name="preference_not_set">Non définie</string>
     <string name="info_backup_successful">Sauvegarde réussie</string>
-    <string name="progress_end_download_successful">Téléchargement réussi</string>
+    <string name="info_download_successful">Téléchargement réussi</string>
     <string name="info_export_report">Le fichier %2$s (%3$s) a été créé dans le répertoire «%1$s».\n\nVous devriez le copier sur un autre média comme sauvegarde en cas de perte, vol ou destruction de votre équipement.</string>
     <string name="info_export_successful">Exportation réussie</string>
     <string name="info_import_complete">Import terminé</string>
@@ -584,14 +584,14 @@
     <string name="pt_ui_system_locale">Paramètres de langue du système</string>
     <string name="pt_ui_theme">Thema</string>
     <string name="pt_website_search_order_and_enable">Réorganiser, activer et désactiver</string>
-    <string name="pv_author_name_family_first">par exemple «Verne, Jules»</string>
-    <string name="pv_author_name_given_first">par exemple «Jules Verne»</string>
-    <string name="pv_bob_books_under_multiple_each_author">Sous chaque auteur</string>
-    <string name="pv_bob_books_under_multiple_each_publisher">sous chaque éditeur.</string>
-    <string name="pv_bob_books_under_multiple_each_series">Sous chaque séries</string>
-    <string name="pv_bob_books_under_multiple_primary_author_only">Sous auteur principal(e) seulement</string>
-    <string name="pv_bob_books_under_multiple_primary_publisher_only">sous leur éditeur principal uniquement.</string>
-    <string name="pv_bob_books_under_multiple_primary_series_only">Sous séries principal(e) seulement</string>
+    <string name="ps_author_name_family_first">par exemple «Verne, Jules»</string>
+    <string name="ps_author_name_given_first">par exemple «Jules Verne»</string>
+    <string name="ps_bob_books_under_multiple_each_author">Sous chaque auteur</string>
+    <string name="ps_bob_books_under_multiple_each_publisher">sous chaque éditeur.</string>
+    <string name="ps_bob_books_under_multiple_each_series">Sous chaque séries</string>
+    <string name="ps_bob_books_under_multiple_primary_author_only">Sous auteur principal(e) seulement</string>
+    <string name="ps_bob_books_under_multiple_primary_publisher_only">sous leur éditeur principal uniquement.</string>
+    <string name="ps_bob_books_under_multiple_primary_series_only">Sous séries principal(e) seulement</string>
     <string name="pv_bob_header_filters">Filtres de livres</string>
     <string name="pv_bob_header_nr_of_books">Montrer le nombre de livres</string>
     <string name="pv_bob_header_style_name">Nom du style</string>
@@ -629,20 +629,20 @@
     <string name="tip_series_book_may_appear_more_than_once">S\'il est affiché pour chacune de ses séries, un livre peut apparaître plusieurs fois dans la liste. Dans ce cas, supprimer l\'un de ces livres supprimera toutes ses copies de la liste.</string>
     <string name="tip_update_fields_from_internet">Les liens de sites externes ne sont traités que si le site est effectivement contacté. En conséquence, le menu «Voir sur…» ne montrera également que ce qui est disponible.</string>
     <string name="tip_view_only_help">Vous pouvez glisser vers la gauche ou la droite pour passer d\'un livre à l\'autre.</string>
-    <string name="txt_cleanup_files">Les fichiers supprimables occupent actuellement %1$s sur la carte SD. Les fichiers journaux et d\'autres données sont sauvegardées sur la carte SD à chaque mise à jour, lorsque vous sauvegardez la base de données ou lorsque l\'application plante. Cliquez sur le bouton ci-dessous pour purger ces fichiers de votre carte SD. Si vous avez fait l\'expérience de plantages ou d\'autres erreurs, envisagez d\'abord d\'utiliser le bouton «%2$s»</string>
-    <string name="txt_displaying_n_books_in_m_entries">%1$d livres, parmi %2$d entrées</string>
-    <string name="txt_export_backup_all">Tous les livres, couvertures, préférence et styles de liste personnels du catalogue seront enregistrés dans la sauvegarde.</string>
-    <string name="txt_export_books_option_since_last_full_backup">Tous les livres ajoutés ou mis à jour depuis la dernière sauvegarde complète</string>
+    <string name="info_cleanup_files">Les fichiers supprimables occupent actuellement %1$s sur la carte SD. Les fichiers journaux et d\'autres données sont sauvegardées sur la carte SD à chaque mise à jour, lorsque vous sauvegardez la base de données ou lorsque l\'application plante. Cliquez sur le bouton ci-dessous pour purger ces fichiers de votre carte SD. Si vous avez fait l\'expérience de plantages ou d\'autres erreurs, envisagez d\'abord d\'utiliser le bouton «%2$s»</string>
+    <string name="info_displaying_n_books_in_m_entries">%1$d livres, parmi %2$d entrées</string>
+    <string name="info_export_backup_all">Tous les livres, couvertures, préférence et styles de liste personnels du catalogue seront enregistrés dans la sauvegarde.</string>
+    <string name="info_export_books_option_since_last_full_backup">Tous les livres ajoutés ou mis à jour depuis la dernière sauvegarde complète</string>
     <string name="option_info_import_books_option_all">Importez de nouveaux livres et écrasez les livres existants. Utilisez ceci pour restaurer une sauvegarde.</string>
     <string name="option_info_import_books_option_new_and_updated">Importez de nouveaux livres et synchronisez les livres existants en fonction de leur dernière date de modification.</string>
     <string name="option_info_import_books_option_new_only">Importez uniquement les nouveaux livres. Toutes les mises à jour des livres existants seront ignorées.</string>
     <string name="ps_manage_fields" tools:ignore="TypographyQuotes">Les champs sélectionnés sont visibles dans les écrans d\'ajout et d\'édition des livres. Les champs non sélectionnés sont cachés.</string>
-    <string name="txt_rebuild_scheduled">Reconstruction planifiée</string>
-    <string name="txt_select_fields_to_update">Les champs sélectionnés vont être mis à jour à partir d\'Internet. Les champs non sélectionnés ne seront pas modifiés.</string>
-    <string name="txt_share_book_im_reading">Je lis «%1$s» %2$s par %3$s %4$s</string>
-    <string name="txt_tap_on_image_to_select">Appuyez sur l\'image plus grande pour la sélectionner.</string>
-    <string name="txt_tap_on_thumbnail_to_zoom">Appuyez sur une miniature pour afficher une image plus grande.</string>
-    <string name="txt_x_pages">%1$d pages</string>
+    <string name="info_rebuild_scheduled">Reconstruction planifiée</string>
+    <string name="info_select_fields_to_update">Les champs sélectionnés vont être mis à jour à partir d\'Internet. Les champs non sélectionnés ne seront pas modifiés.</string>
+    <string name="info_share_book_im_reading">Je lis «%1$s» %2$s par %3$s %4$s</string>
+    <string name="info_tap_on_image_to_select">Appuyez sur l\'image plus grande pour la sélectionner.</string>
+    <string name="info_tap_on_thumbnail_to_zoom">Appuyez sur une miniature pour afficher une image plus grande.</string>
+    <string name="info_x_pages">%1$d pages</string>
     <string name="unknown">Inconnu</string>
     <string name="unknown_author">[Auteur inconnu]</string>
     <string name="unknown_title">[Titre inconnu]</string>
@@ -690,7 +690,7 @@
     <string name="whichViewApplication">Ouvrir avec</string>
     <string name="x_of_y">%1$d de %2$d</string>
     <string name="yes">Oui</string>
-    <string name="lbl_story_in_single_book">«%1$s» est présent dans un seul livre:\n\n%2$s</string>
+    <string name="info_story_in_single_book">«%1$s» est présent dans un seul livre:\n\n%2$s</string>
     <string name="tip_import_isbn_list">Importez un fichier texte avec des numéros ISBN. Le fichier doit avoir un seul ISBN sur chaque ligne. Les résultats seront placés dans la file d\'attente.</string>
     <string name="lbl_date_added">Date ajoutée</string>
 
