--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -144,8 +144,8 @@
     <string name="action_email">Invia email</string>
     <string name="btn_just_this_shelf">Solo questa libreria</string>
     <string name="action_learn_more">Ulteriori informazioni</string>
-    <string name="btn_less_ellipsis">Di meno…</string>
-    <string name="btn_more_ellipsis">Altro…</string>
+    <string name="action_less_ellipsis">Di meno…</string>
+    <string name="action_more_ellipsis">Altro…</string>
     <string name="action_show_options">Opzioni</string>
     <string name="action_show_toc_long">Mostra sommario</string>
     <string name="action_start_export">Avvia l\'esportazione</string>
@@ -284,13 +284,13 @@
     <string name="lbl_backup">Backup</string>
     <string name="lbl_barcode">Codice a barre</string>
     <string name="lbl_book">Libro</string>
-    <string name="lbl_book_detail_screen">Pagina dei dettagli del libro</string>
+    <string name="pc_book_detail_screen">Pagina dei dettagli del libro</string>
     <string name="lbl_book_type">Tipo di libro</string>
     <string name="lbl_books">Libri</string>
     <string name="lbl_bookshelf">Biblioteca</string>
     <string name="lbl_bookshelves">Biblioteche</string>
     <string name="lbl_calibre_content_server">Server di contenuti Calibre</string>
-    <string name="lbl_calibre_content_server_extension_info">L\'estensione del server dei contenuti Calibre non è installata.</string>
+    <string name="info_calibre_content_server_extension">L\'estensione del server dei contenuti Calibre non è installata.</string>
     <string name="lbl_certificate_ca">Certificato CA</string>
     <string name="lbl_certificates">Certificati</string>
     <string name="X_lbl_clear_filters">Cancella filtri</string>
@@ -327,7 +327,7 @@
     <string name="lbl_details_have_changed">Dettagli modificati</string>
     <string name="lbl_duplicate_book">Duplica titolo libro</string>
     <string name="lbl_dust_cover">Sovraccoperta</string>
-    <string name="lbl_edit_settings">Modificare le impostazioni</string>
+    <string name="option_storage_edit_settings">Modificare le impostazioni</string>
     <string name="lbl_edit_style">Modifica stile</string>
     <string name="lbl_edition">Edizione</string>
     <string name="lbl_edition_book_club">Club del libro</string>
@@ -419,11 +419,11 @@
     <string name="option_sort_and_style_ellipsis">Ordina &amp; Stile…</string>
     <string name="lbl_sorting">Ordinamento</string>
     <string name="lbl_sql_query">Interrogazione SQL</string>
-    <string name="lbl_storage_quit_and_reinsert_sdcard">Chiudi l\'app e inserisci la scheda SD corretta</string>
+    <string name="option_storage_quit_and_reinsert_sdcard">Chiudi l\'app e inserisci la scheda SD corretta</string>
     <string name="option_storage_select">Usa «%1$s»</string>
     <string name="lbl_storage_settings">Spazio di archiviazione</string>
-    <string name="lbl_storage_volume">Volume di archiviazione</string>
-    <string name="lbl_story_in_multiple_books">«%1$s» è presente in più libri:\n\n%2$s</string>
+    <string name="pt_storage_volume">Volume di archiviazione</string>
+    <string name="info_story_in_multiple_books">«%1$s» è presente in più libri:\n\n%2$s</string>
     <string name="option_isbn_strict">ISBN rigoroso</string>
     <string name="lbl_style">Stile</string>
     <string name="lbl_styles">Stili</string>
@@ -515,7 +515,7 @@
     <string name="pe_ui_theme_day_night">Giornata / Notte</string>
     <string name="pe_ui_theme_light">Chiaro</string>
     <string name="pt_barcode_scanner">Scanner di codici a barre</string>
-    <string name="pg_bob_show_details">Dettagli del libro visualizzati nell\'elenco</string>
+    <string name="pt_bob_show_details">Dettagli del libro visualizzati nell\'elenco</string>
     <string name="pc_bob">Elenchi di libri</string>
     <string name="lbl_filters">Filtra libri</string>
     <string name="pc_image_cache">Cache di immagini</string>
@@ -524,7 +524,7 @@
     <string name="pt_field_visibility">Gestisci visibilità campi</string>
     <string name="preference_not_set">Non impostato</string>
     <string name="info_backup_successful">Backup riuscito</string>
-    <string name="progress_end_download_successful">Download riuscito</string>
+    <string name="info_download_successful">Download riuscito</string>
     <string name="info_export_report">Un %3$s file chiamato %2$s è stato creato nella cartella «%1$s».\n\nTi raccomandiamo di tenerne copia da qualche altra parte a protezione dei dati in caso il tuo apparecchio venga danneggiato, perso o rubato.</string>
     <string name="info_export_successful">Esportazione riuscita</string>
     <string name="info_import_complete">Importazione Completata</string>
@@ -582,14 +582,14 @@
     <string name="pt_ui_system_locale">Impostazioni locali di sistema</string>
     <string name="pt_ui_theme">Tema</string>
     <string name="pt_website_search_order_and_enable">Riordina, abilita e disabilita</string>
-    <string name="pv_author_name_family_first">es. «Alighieri, Dante»</string>
-    <string name="pv_author_name_given_first">es. «Dante Alighieri»</string>
-    <string name="pv_bob_books_under_multiple_each_author">Sotto ciascuno autore</string>
-    <string name="pv_bob_books_under_multiple_each_publisher">sotto ciascun editore.</string>
-    <string name="pv_bob_books_under_multiple_each_series">Sotto ciascuno serie</string>
-    <string name="pv_bob_books_under_multiple_primary_author_only">Solo sotto autore primario</string>
-    <string name="pv_bob_books_under_multiple_primary_publisher_only">solo con il loro editore principale.</string>
-    <string name="pv_bob_books_under_multiple_primary_series_only">Solo sotto serie primario</string>
+    <string name="ps_author_name_family_first">es. «Alighieri, Dante»</string>
+    <string name="ps_author_name_given_first">es. «Dante Alighieri»</string>
+    <string name="ps_bob_books_under_multiple_each_author">Sotto ciascuno autore</string>
+    <string name="ps_bob_books_under_multiple_each_publisher">sotto ciascun editore.</string>
+    <string name="ps_bob_books_under_multiple_each_series">Sotto ciascuno serie</string>
+    <string name="ps_bob_books_under_multiple_primary_author_only">Solo sotto autore primario</string>
+    <string name="ps_bob_books_under_multiple_primary_publisher_only">solo con il loro editore principale.</string>
+    <string name="ps_bob_books_under_multiple_primary_series_only">Solo sotto serie primario</string>
     <string name="pv_bob_header_filters">Filtra libri</string>
     <string name="pv_bob_header_nr_of_books">Mostra numero di libri</string>
     <string name="pv_bob_header_style_name">Nome dello stile</string>
@@ -627,20 +627,20 @@
     <string name="tip_series_book_may_appear_more_than_once">If mostrato in ciascuna serie, uno stesso libro pu\o comparire in lista più di una volta. In quel caso la cancellazione di una qualsiasi delle occorrenze multiple provocherà la cancellazione dall\'elenco di tutte le occorrenze.</string>
     <string name="tip_update_fields_from_internet">I collegamenti a siti esterni vengono elaborati solo se il sito viene effettivamente contattato. Di conseguenza, anche il menu «Visualizza su…» mostrerà solo ciò che è disponibile.</string>
     <string name="tip_view_only_help">Puoi scorrere verso sinistra o verso destra per visualizzare altri libri.</string>
-    <string name="txt_cleanup_files">File eliminabili attualmente occupano %1$s sulla scheda SD. Si tratta di file di log e altri dati salvati sulla scheda SD ad ogni aggiornamento, ad ogni backup del database o quando l\'applicazione va in crash. Clicca sul pulsante qui sotto per eliminare questi file dalla SD. Se sono avvenuti crash o altri errori, valuta se cliccare il pulsante «%2$s» prima di eliminarli.</string>
-    <string name="txt_displaying_n_books_in_m_entries">%1$d libri, in %2$d voci</string>
-    <string name="txt_export_backup_all">Tutti i libri, copertine, impostazioni e stili personalizzati saranno esportati nell\'archivio.</string>
-    <string name="txt_export_books_option_since_last_full_backup">Tutti i libri aggiunti o aggiornati dall\'ultimo backup completo</string>
+    <string name="info_cleanup_files">File eliminabili attualmente occupano %1$s sulla scheda SD. Si tratta di file di log e altri dati salvati sulla scheda SD ad ogni aggiornamento, ad ogni backup del database o quando l\'applicazione va in crash. Clicca sul pulsante qui sotto per eliminare questi file dalla SD. Se sono avvenuti crash o altri errori, valuta se cliccare il pulsante «%2$s» prima di eliminarli.</string>
+    <string name="info_displaying_n_books_in_m_entries">%1$d libri, in %2$d voci</string>
+    <string name="info_export_backup_all">Tutti i libri, copertine, impostazioni e stili personalizzati saranno esportati nell\'archivio.</string>
+    <string name="info_export_books_option_since_last_full_backup">Tutti i libri aggiunti o aggiornati dall\'ultimo backup completo</string>
     <string name="option_info_import_books_option_all">Importa nuovi libri e sovrascrivi i libri esistenti. Usalo per ripristinare un backup.</string>
     <string name="option_info_import_books_option_new_and_updated">Importa nuovi libri e sincronizza i libri esistenti in base alla data dell\'ultima modifica.</string>
     <string name="option_info_import_books_option_new_only">Importa solo nuovi libri. Eventuali aggiornamenti ai libri esistenti verranno ignorati.</string>
     <string name="ps_manage_fields">I campi selezionati sono visibili nella schermata aggiungi/modifica libro. Gli altri rimangono nascosti.</string>
-    <string name="txt_rebuild_scheduled">Ricostruzione programmata</string>
-    <string name="txt_select_fields_to_update">I campi selezionati verranno aggiornato da Internet. Gli altri rimarranno invariati.</string>
-    <string name="txt_share_book_im_reading">Sto leggendo «%1$s» %2$s di %3$s %4$s</string>
-    <string name="txt_tap_on_image_to_select">Tocca l\'immagine più grande per selezionarla.</string>
-    <string name="txt_tap_on_thumbnail_to_zoom">Toccare una miniatura per visualizzare un\'immagine più grande.</string>
-    <string name="txt_x_pages">%1$d pagine</string>
+    <string name="info_rebuild_scheduled">Ricostruzione programmata</string>
+    <string name="info_select_fields_to_update">I campi selezionati verranno aggiornato da Internet. Gli altri rimarranno invariati.</string>
+    <string name="info_share_book_im_reading">Sto leggendo «%1$s» %2$s di %3$s %4$s</string>
+    <string name="info_tap_on_image_to_select">Tocca l\'immagine più grande per selezionarla.</string>
+    <string name="info_tap_on_thumbnail_to_zoom">Toccare una miniatura per visualizzare un\'immagine più grande.</string>
+    <string name="info_x_pages">%1$d pagine</string>
     <string name="unknown">Sconosciuto</string>
     <string name="unknown_author">[Autore sconosciuto]</string>
     <string name="unknown_title">[Titolo sconosciuto]</string>
@@ -688,7 +688,7 @@
     <string name="whichViewApplication">Apri con</string>
     <string name="x_of_y">%1$d di %2$d</string>
     <string name="yes">Sì</string>
-    <string name="lbl_story_in_single_book">«%1$s» è presente in un solo libro:\n\n%2$s</string>
+    <string name="info_story_in_single_book">«%1$s» è presente in un solo libro:\n\n%2$s</string>
     <string name="tip_import_isbn_list">Importa un file di testo con numeri ISBN. Il file dovrebbe avere un unico codice ISBN su ogni riga. I risultati verranno messi in coda.</string>
     <string name="lbl_date_added">Data di inserimento</string>
 
