--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -142,8 +142,8 @@
     <string name="action_email">E-mailen</string>
     <string name="btn_just_this_shelf">Alleen deze boekenplank</string>
     <string name="action_learn_more">Meer info</string>
-    <string name="btn_less_ellipsis">Minder…</string>
-    <string name="btn_more_ellipsis">Meer…</string>
+    <string name="action_less_ellipsis">Minder…</string>
+    <string name="action_more_ellipsis">Meer…</string>
     <string name="action_show_options">Opties</string>
     <string name="action_show_toc_long">Inhoudsopgave weergeven</string>
     <string name="action_start_export">Start export</string>
@@ -282,13 +282,13 @@
     <string name="lbl_backup">Back-up</string>
     <string name="lbl_barcode">Barcode</string>
     <string name="lbl_book">Boek</string>
-    <string name="lbl_book_detail_screen">Pagina met boekdetails</string>
+    <string name="pc_book_detail_screen">Pagina met boekdetails</string>
     <string name="lbl_book_type">Boektype</string>
     <string name="lbl_books">Boeken</string>
     <string name="lbl_bookshelf">Boekenplank</string>
     <string name="lbl_bookshelves">Boekenplanken</string>
     <string name="lbl_calibre_content_server">Calibre-inhoudsserver</string>
-    <string name="lbl_calibre_content_server_extension_info">Calibre content server-extensie is niet geïnstalleerd.</string>
+    <string name="info_calibre_content_server_extension">Calibre content server-extensie is niet geïnstalleerd.</string>
     <string name="lbl_certificate_ca">CA-certificaat</string>
     <string name="lbl_certificates">Certificaten</string>
     <string name="X_lbl_clear_filters">Filters wissen</string>
@@ -325,7 +325,7 @@
     <string name="lbl_details_have_changed">De details zijn veranderd</string>
     <string name="lbl_duplicate_book">Dupliceer Boek</string>
     <string name="lbl_dust_cover">Stof omslag</string>
-    <string name="lbl_edit_settings">Instellingen bewerken</string>
+    <string name="option_storage_edit_settings">Instellingen bewerken</string>
     <string name="lbl_edit_style">Stijl bewerken</string>
     <string name="lbl_edition">Editie</string>
     <string name="lbl_edition_book_club">Boekenclub</string>
@@ -417,12 +417,12 @@
     <string name="option_sort_and_style_ellipsis">Sorteren &amp; Stijlen…</string>
     <string name="lbl_sorting">Sorteren</string>
     <string name="lbl_sql_query">SQL-query</string>
-    <string name="lbl_storage_quit_and_reinsert_sdcard">Sluit de app en inserteer de juiste SD kaart</string>
+    <string name="option_storage_quit_and_reinsert_sdcard">Sluit de app en inserteer de juiste SD kaart</string>
     <string name="option_storage_select">Gebruik „%1$s”</string>
     <string name="lbl_storage_settings">Opslagruimte</string>
-    <string name="lbl_storage_volume">Opslagvolume</string>
-    <string name="lbl_story_in_multiple_books">„%1$s” is present in meerdere boeken:\n\n%2$s</string>
-    <string name="lbl_story_in_single_book">„%1$s” is present in één enkel book:\n\n%2$s</string>
+    <string name="pt_storage_volume">Opslagvolume</string>
+    <string name="info_story_in_multiple_books">„%1$s” is present in meerdere boeken:\n\n%2$s</string>
+    <string name="info_story_in_single_book">„%1$s” is present in één enkel book:\n\n%2$s</string>
     <string name="option_isbn_strict">Strikt ISBN</string>
     <string name="lbl_style">Stijl</string>
     <string name="lbl_styles">Stijl</string>
@@ -514,7 +514,7 @@
     <string name="pe_ui_theme_day_night">Dag / Nacht</string>
     <string name="pe_ui_theme_light">Helder</string>
     <string name="pt_barcode_scanner">Barcode scanner</string>
-    <string name="pg_bob_show_details">Boekdetails weergegeven in de lijst</string>
+    <string name="pt_bob_show_details">Boekdetails weergegeven in de lijst</string>
     <string name="pc_bob">Boeken Lijst</string>
     <string name="lbl_filters">Boekfilters</string>
     <string name="pc_image_cache">Afbeeldingencache</string>
@@ -523,7 +523,7 @@
     <string name="pt_field_visibility">Zichtbaarheid velden beheren</string>
     <string name="preference_not_set">Niet ingesteld</string>
     <string name="info_backup_successful">Back-up succesvol</string>
-    <string name="progress_end_download_successful">Download succesvol</string>
+    <string name="info_download_successful">Download succesvol</string>
     <string name="info_export_report">Een %3$s bestand met de naam %2$s is aangemaakt in de „%1$s” folder.\n\nWe raden aan dit bestand naar een ander plek te kopiëren om de gegevens veilig te stellen in geval uw apparaat wordt gestolen, beschadigd of verloren raakt.</string>
     <string name="info_export_successful">Export succesvol</string>
     <string name="info_import_complete">Import Compleet</string>
@@ -581,14 +581,14 @@
     <string name="pt_ui_system_locale">Systeem taal</string>
     <string name="pt_ui_theme">Thema</string>
     <string name="pt_website_search_order_and_enable">Herordenen, inschakelen &amp; uitschakelen</string>
-    <string name="pv_author_name_family_first">bvb. „Reve, Gerard”</string>
-    <string name="pv_author_name_given_first">bvb. „Gerard Reve”</string>
-    <string name="pv_bob_books_under_multiple_each_author">Onder elke auteur</string>
-    <string name="pv_bob_books_under_multiple_each_publisher">onder elke uitgever.</string>
-    <string name="pv_bob_books_under_multiple_each_series">Onder elke reeks</string>
-    <string name="pv_bob_books_under_multiple_primary_author_only">Alleen onder primaire auteur</string>
-    <string name="pv_bob_books_under_multiple_primary_publisher_only">alleen onder hun primaire uitgever.</string>
-    <string name="pv_bob_books_under_multiple_primary_series_only">Alleen onder primaire reeks</string>
+    <string name="ps_author_name_family_first">bvb. „Reve, Gerard”</string>
+    <string name="ps_author_name_given_first">bvb. „Gerard Reve”</string>
+    <string name="ps_bob_books_under_multiple_each_author">Onder elke auteur</string>
+    <string name="ps_bob_books_under_multiple_each_publisher">onder elke uitgever.</string>
+    <string name="ps_bob_books_under_multiple_each_series">Onder elke reeks</string>
+    <string name="ps_bob_books_under_multiple_primary_author_only">Alleen onder primaire auteur</string>
+    <string name="ps_bob_books_under_multiple_primary_publisher_only">alleen onder hun primaire uitgever.</string>
+    <string name="ps_bob_books_under_multiple_primary_series_only">Alleen onder primaire reeks</string>
     <string name="pv_bob_header_filters">Boekfilters</string>
     <string name="pv_bob_header_nr_of_books">Aantal boeken</string>
     <string name="pv_bob_header_style_name">Stijl naam</string>
@@ -626,20 +626,20 @@
     <string name="tip_series_book_may_appear_more_than_once">Als boeken worden getoond in alle reeksen, kunnen ze meermalen voorkomen in de lijst. Het verwijderen van één van die boeken heeft tot gevolg dat alle exemplaren worden verwijderd uit de lijst.</string>
     <string name="tip_update_fields_from_internet">Externe sitekoppelingen worden alleen verwerkt als er daadwerkelijk contact met de site wordt gemaakt. Als gevolg hiervan zal het menu „Bekijk op…” eveneens alleen weergeven wat beschikbaar is.</string>
     <string name="tip_view_only_help">Je kan naar link en rechts vegen om naar andere boeken te gaan.</string>
-    <string name="txt_cleanup_files">Permanent te verwijderen bestanden nemen %1$s van uw SD-kaart in beslag. Log-bestanden en andere gegevens worden opgeslagen op uw SD-kaart bij iedere upgrade, na elke back-up van de database of wanneer de toepassing crasht. Tik op de knop hieronder om deze bestanden permanent te verwijderen van uw SD-kaart. Als je crashes ondervind of andere fouten, overweeg dan eerst de „%2$s” optie te gebruiken.</string>
-    <string name="txt_displaying_n_books_in_m_entries">%1$d boeken, in %2$d slots</string>
-    <string name="txt_export_backup_all">Alle boeken, afbeeldingen, instellingen en aangepaste stijlen zullen worden geëxporteerd naar het archief.</string>
-    <string name="txt_export_books_option_since_last_full_backup">Alle boeken die zijn toegevoegd of bijgewerkt sinds de laatste volledige back-up</string>
+    <string name="info_cleanup_files">Permanent te verwijderen bestanden nemen %1$s van uw SD-kaart in beslag. Log-bestanden en andere gegevens worden opgeslagen op uw SD-kaart bij iedere upgrade, na elke back-up van de database of wanneer de toepassing crasht. Tik op de knop hieronder om deze bestanden permanent te verwijderen van uw SD-kaart. Als je crashes ondervind of andere fouten, overweeg dan eerst de „%2$s” optie te gebruiken.</string>
+    <string name="info_displaying_n_books_in_m_entries">%1$d boeken, in %2$d slots</string>
+    <string name="info_export_backup_all">Alle boeken, afbeeldingen, instellingen en aangepaste stijlen zullen worden geëxporteerd naar het archief.</string>
+    <string name="info_export_books_option_since_last_full_backup">Alle boeken die zijn toegevoegd of bijgewerkt sinds de laatste volledige back-up</string>
     <string name="option_info_import_books_option_all">Importeer nieuwe boeken en overschrijf bestaande boeken. Gebruik dit om een back-up te herstellen.</string>
     <string name="option_info_import_books_option_new_and_updated">Importeer nieuwe boeken en synchroniseer bestaande boeken op basis van hun laatste wijzigingsdatum.</string>
     <string name="option_info_import_books_option_new_only">Importeer alleen nieuwe boeken. Updates van bestaande boeken worden genegeerd.</string>
     <string name="ps_manage_fields">Geselecteerde velden zijn zichtbaar in de toevoegen/bewerken boekschermen. Ongeselecteerde velden zijn verborgen.</string>
-    <string name="txt_rebuild_scheduled">Herbouw gepland</string>
-    <string name="txt_select_fields_to_update">De geselecteerde velden zullen worden bijgewerkt vanaf het internet. Niet geselecteerde velden blijven onveranderd.</string>
-    <string name="txt_share_book_im_reading">Ik lees %1$s %2$s door %3$s %4$s</string>
-    <string name="txt_tap_on_image_to_select">Tik op de grotere afbeelding om deze te selecteren.</string>
-    <string name="txt_tap_on_thumbnail_to_zoom">Tik op een miniatuur om een grotere afbeelding weer te geven.</string>
-    <string name="txt_x_pages">%1$d pagina\'s</string>
+    <string name="info_rebuild_scheduled">Herbouw gepland</string>
+    <string name="info_select_fields_to_update">De geselecteerde velden zullen worden bijgewerkt vanaf het internet. Niet geselecteerde velden blijven onveranderd.</string>
+    <string name="info_share_book_im_reading">Ik lees %1$s %2$s door %3$s %4$s</string>
+    <string name="info_tap_on_image_to_select">Tik op de grotere afbeelding om deze te selecteren.</string>
+    <string name="info_tap_on_thumbnail_to_zoom">Tik op een miniatuur om een grotere afbeelding weer te geven.</string>
+    <string name="info_x_pages">%1$d pagina\'s</string>
     <string name="unknown">Onbekend</string>
     <string name="unknown_author">[Onbekende auteur]</string>
     <string name="unknown_title">[Onbekende titel]</string>
