--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -144,8 +144,8 @@
     <string name="action_email">Написать письмо</string>
     <string name="btn_just_this_shelf">Только эта книжная полка</string>
     <string name="action_learn_more">Подробнее</string>
-    <string name="btn_less_ellipsis">Меньше…</string>
-    <string name="btn_more_ellipsis">Ещё…</string>
+    <string name="action_less_ellipsis">Меньше…</string>
+    <string name="action_more_ellipsis">Ещё…</string>
     <string name="action_show_options">опции</string>
     <string name="action_show_toc_long">Показать оглавление</string>
     <string name="action_start_export">Начать экспорт</string>
@@ -284,13 +284,13 @@
     <string name="lbl_backup">Резервная копия</string>
     <string name="lbl_barcode">Штрих-код</string>
     <string name="lbl_book">Книга</string>
-    <string name="lbl_book_detail_screen">Страница сведений о книге</string>
+    <string name="pc_book_detail_screen">Страница сведений о книге</string>
     <string name="lbl_book_type">Тип книги</string>
     <string name="lbl_books">книги</string>
     <string name="lbl_bookshelf">Книжная полка</string>
     <string name="lbl_bookshelves">Книжные полки</string>
     <string name="lbl_calibre_content_server">Сервер содержимого Calibre</string>
-    <string name="lbl_calibre_content_server_extension_info">Расширение сервера содержимого Caliber не установлено.</string>
+    <string name="info_calibre_content_server_extension">Расширение сервера содержимого Caliber не установлено.</string>
     <string name="lbl_certificate_ca">Сертификат центра сертификации</string>
     <string name="lbl_certificates">Cертификаты</string>
     <string name="X_lbl_clear_filters">Сбросить фильтры</string>
@@ -327,7 +327,7 @@
     <string name="lbl_details_have_changed">Детали были измененны</string>
     <string name="lbl_duplicate_book">Копия книги</string>
     <string name="lbl_dust_cover">Суперобложка</string>
-    <string name="lbl_edit_settings">Изменить настройки</string>
+    <string name="option_storage_edit_settings">Изменить настройки</string>
     <string name="lbl_edit_style">Редактировать стиль</string>
     <string name="lbl_edition">Издание</string>
     <string name="lbl_edition_book_club">Книжный клуб Издание</string>
@@ -419,11 +419,11 @@
     <string name="option_sort_and_style_ellipsis">Сортировать &amp; Стиль…</string>
     <string name="lbl_sorting">Сортировка</string>
     <string name="lbl_sql_query">SQL-запрос</string>
-    <string name="lbl_storage_quit_and_reinsert_sdcard">Закройте приложение и вставьте правильную SD-карту.</string>
+    <string name="option_storage_quit_and_reinsert_sdcard">Закройте приложение и вставьте правильную SD-карту.</string>
     <string name="option_storage_select">Используйте «%1$s»</string>
     <string name="lbl_storage_settings">Хранилище</string>
-    <string name="lbl_storage_volume">Объем хранилища</string>
-    <string name="lbl_story_in_multiple_books">«%1$s» присутствует в нескольких книгах:\n\n%2$s</string>
+    <string name="pt_storage_volume">Объем хранилища</string>
+    <string name="info_story_in_multiple_books">«%1$s» присутствует в нескольких книгах:\n\n%2$s</string>
     <string name="option_isbn_strict">Строгий ISBN</string>
     <string name="lbl_style">стиль</string>
     <string name="lbl_styles">стили</string>
@@ -515,7 +515,7 @@
     <string name="pe_ui_theme_day_night">День / Ночь</string>
     <string name="pe_ui_theme_light">свет</string>
     <string name="pt_barcode_scanner">Сканер штрих-кода</string>
-    <string name="pg_bob_show_details">Информация о книге отображается в списке</string>
+    <string name="pt_bob_show_details">Информация о книге отображается в списке</string>
     <string name="pc_bob">Списки книг</string>
     <string name="lbl_filters">Фильтры книг</string>
     <string name="pc_image_cache">Кэш изображений</string>
@@ -524,7 +524,7 @@
     <string name="pt_field_visibility">Видимость полей</string>
     <string name="preference_not_set">Не указано</string>
     <string name="info_backup_successful">Резервное копирование выполнено успешно</string>
-    <string name="progress_end_download_successful">Загрузка прошла успешно</string>
+    <string name="info_download_successful">Загрузка прошла успешно</string>
     <string name="info_export_report">Файл %3$s с именем %2$s был создан в папке «%1$s».\n\nВам следует вручную скопировать его, чтобы защитить данные в случае утери или повреждения телефона.</string>
     <string name="info_export_successful">Экспорт успешен</string>
     <string name="info_import_complete">Импорт завершен</string>
@@ -580,14 +580,14 @@
     <string name="pt_ui_system_locale">Локаль системы</string>
     <string name="pt_ui_theme">тема</string>
     <string name="pt_website_search_order_and_enable">Изменить порядок, включить и отключить</string>
-    <string name="pv_author_name_family_first">например «Достоевский, Фёдор»</string>
-    <string name="pv_author_name_given_first">например «Фёдор Достоевский»</string>
-    <string name="pv_bob_books_under_multiple_each_author">Под каждым автор</string>
-    <string name="pv_bob_books_under_multiple_each_publisher">под каждым издателем.</string>
-    <string name="pv_bob_books_under_multiple_each_series">Под каждым серии</string>
-    <string name="pv_bob_books_under_multiple_primary_author_only">Только под первым автор</string>
-    <string name="pv_bob_books_under_multiple_primary_publisher_only">только под своим основным издателем.</string>
-    <string name="pv_bob_books_under_multiple_primary_series_only">Только под первым серии</string>
+    <string name="ps_author_name_family_first">например «Достоевский, Фёдор»</string>
+    <string name="ps_author_name_given_first">например «Фёдор Достоевский»</string>
+    <string name="ps_bob_books_under_multiple_each_author">Под каждым автор</string>
+    <string name="ps_bob_books_under_multiple_each_publisher">под каждым издателем.</string>
+    <string name="ps_bob_books_under_multiple_each_series">Под каждым серии</string>
+    <string name="ps_bob_books_under_multiple_primary_author_only">Только под первым автор</string>
+    <string name="ps_bob_books_under_multiple_primary_publisher_only">только под своим основным издателем.</string>
+    <string name="ps_bob_books_under_multiple_primary_series_only">Только под первым серии</string>
     <string name="pv_bob_header_filters">Фильтры книг</string>
     <string name="pv_bob_header_nr_of_books">Показывать номера книг</string>
     <string name="pv_bob_header_style_name">Название стиля</string>
@@ -625,20 +625,20 @@
     <string name="tip_series_book_may_appear_more_than_once">Если показывается по сериям, то одна и та же книга может появиться в списке многократно. В этом случае удаление одной из таких книг, удалит и все остальные из списка.</string>
     <string name="tip_update_fields_from_internet">Ссылки на внешние сайты обрабатываются только в том случае, если сайт действительно связался. В результате меню «Смотреть на…» также будет показывать только то, что доступно.</string>
     <string name="tip_view_only_help">вы можете потянуть экран вправо или влево, чтобы перейти на другие книги. </string>
-    <string name="txt_cleanup_files">Файлы, подлежащие очистке сейчас занимают %1$s на SD-карте. Лог-файлы и другие данные сохраняются на SD-карте при каждом обновлении, когда происходит резервное копирование базы, или в случае аварийного завершения программы. Нажмите кнопку внизу экрана, чтобы очистить эти файлы с SD-карты. Если у вас аварийно завершается программа или происходят иные ошибки, пожалуйста, сначала воспользуйтесь кнопкой «%2$s».</string>
-    <string name="txt_displaying_n_books_in_m_entries">%1$d книг, в %2$d элементах</string>
-    <string name="txt_export_backup_all">Все книги, обложки, настройки и пользовательские стили будут экспортированы в архив.</string>
-    <string name="txt_export_books_option_since_last_full_backup">Все добавленные или обновленные книги с последнего бэкапа</string>
+    <string name="info_cleanup_files">Файлы, подлежащие очистке сейчас занимают %1$s на SD-карте. Лог-файлы и другие данные сохраняются на SD-карте при каждом обновлении, когда происходит резервное копирование базы, или в случае аварийного завершения программы. Нажмите кнопку внизу экрана, чтобы очистить эти файлы с SD-карты. Если у вас аварийно завершается программа или происходят иные ошибки, пожалуйста, сначала воспользуйтесь кнопкой «%2$s».</string>
+    <string name="info_displaying_n_books_in_m_entries">%1$d книг, в %2$d элементах</string>
+    <string name="info_export_backup_all">Все книги, обложки, настройки и пользовательские стили будут экспортированы в архив.</string>
+    <string name="info_export_books_option_since_last_full_backup">Все добавленные или обновленные книги с последнего бэкапа</string>
     <string name="option_info_import_books_option_all">Импортируйте новые книги и перезаписывайте существующие книги. Используйте это для восстановления резервной копии.</string>
     <string name="option_info_import_books_option_new_and_updated">Импортируйте новые книги и синхронизируйте существующие книги по дате их последнего изменения.</string>
     <string name="option_info_import_books_option_new_only">Импортируйте только новые книги. Любые обновления существующих книг будут проигнорированы.</string>
     <string name="ps_manage_fields">Выбранные поля видны на экранах добавления/редактирования книги. Невыбранные поля скрыты.</string>
-    <string name="txt_rebuild_scheduled">Перестройка запланирована</string>
-    <string name="txt_select_fields_to_update">Выбранные поля будут обновлены через интернет. Остальные останутся неизменными.</string>
-    <string name="txt_share_book_im_reading">Я читаю «%1$s» %2$s %3$s %4$s</string>
-    <string name="txt_tap_on_image_to_select">Нажмите на увеличенное изображение, чтобы выбрать его.</string>
-    <string name="txt_tap_on_thumbnail_to_zoom">Нажмите на миниатюру, чтобы отобразить увеличенное изображение.</string>
-    <string name="txt_x_pages">Страниц: %1$d</string>
+    <string name="info_rebuild_scheduled">Перестройка запланирована</string>
+    <string name="info_select_fields_to_update">Выбранные поля будут обновлены через интернет. Остальные останутся неизменными.</string>
+    <string name="info_share_book_im_reading">Я читаю «%1$s» %2$s %3$s %4$s</string>
+    <string name="info_tap_on_image_to_select">Нажмите на увеличенное изображение, чтобы выбрать его.</string>
+    <string name="info_tap_on_thumbnail_to_zoom">Нажмите на миниатюру, чтобы отобразить увеличенное изображение.</string>
+    <string name="info_x_pages">Страниц: %1$d</string>
     <string name="unknown">Неизвестно</string>
     <string name="unknown_author">[Неизвестный автор]</string>
     <string name="unknown_title">[Неизвестное название]</string>
@@ -686,7 +686,7 @@
     <string name="whichViewApplication">Открыть с помощью приложения:</string>
     <string name="x_of_y">%1$d из %2$d</string>
     <string name="yes">Да</string>
-    <string name="lbl_story_in_single_book">«%1$s» присутствует в одной книге:\n\n%2$s</string>
+    <string name="info_story_in_single_book">«%1$s» присутствует в одной книге:\n\n%2$s</string>
     <string name="tip_import_isbn_list">Импортируйте текстовый файл с номерами ISBN. Файл должен иметь один ISBN в каждой строке. Результаты будут помещены в очередь.</string>
     <string name="lbl_date_added">Дата добавления</string>
 
