--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -146,8 +146,8 @@
     <string name="action_email">E-posta</string>
     <string name="btn_just_this_shelf">Yalnızca bu kitaplık</string>
     <string name="action_learn_more">Daha fazla bilgi</string>
-    <string name="btn_less_ellipsis">Az…</string>
-    <string name="btn_more_ellipsis">Diğer…</string>
+    <string name="action_less_ellipsis">Az…</string>
+    <string name="action_more_ellipsis">Diğer…</string>
     <string name="action_show_options">Seçenekler</string>
     <string name="action_show_toc_long">İçindekiler Tablosunu Göster</string>
     <string name="action_start_export">Dışa aktarmayı başlat</string>
@@ -287,13 +287,13 @@
     <string name="lbl_backup">Yedek kopya</string>
     <string name="lbl_barcode">Barkod</string>
     <string name="lbl_book">Kitap</string>
-    <string name="lbl_book_detail_screen">Kitap ayrıntıları sayfası</string>
+    <string name="pc_book_detail_screen">Kitap ayrıntıları sayfası</string>
     <string name="lbl_book_type">Kitap türü</string>
     <string name="lbl_books">Kitaplar</string>
     <string name="lbl_bookshelf">Kitaplık</string>
     <string name="lbl_bookshelves">Kitap rafları</string>
     <string name="lbl_calibre_content_server">Calibre İçerik Sunucusu</string>
-    <string name="lbl_calibre_content_server_extension_info">Calibre içerik sunucusu uzantısı kurulu değil.</string>
+    <string name="info_calibre_content_server_extension">Calibre içerik sunucusu uzantısı kurulu değil.</string>
     <string name="lbl_certificate_ca">CA sertifikası</string>
     <string name="lbl_certificates">Sertifikalar</string>
     <string name="X_lbl_clear_filters">Filtreleri Temizle</string>
@@ -330,7 +330,7 @@
     <string name="lbl_details_have_changed">Ayrıntılar değiştirildi</string>
     <string name="lbl_duplicate_book">Kitabı kopyala</string>
     <string name="lbl_dust_cover">Toz ceket</string>
-    <string name="lbl_edit_settings">Ayarları düzenle</string>
+    <string name="option_storage_edit_settings">Ayarları düzenle</string>
     <string name="lbl_edit_style">Biçemi düzenle</string>
     <string name="lbl_edition">Baskı</string>
     <string name="lbl_edition_book_club">Kitap Kulübü baskısı</string>
@@ -422,12 +422,12 @@
     <string name="option_sort_and_style_ellipsis">Sıralama &amp; biçemi…</string>
     <string name="lbl_sorting">sınıflandırma</string>
     <string name="lbl_sql_query">SQL sorgusu</string>
-    <string name="lbl_storage_quit_and_reinsert_sdcard">Uygulamayı kapatın ve doğru SD kartı takın</string>
+    <string name="option_storage_quit_and_reinsert_sdcard">Uygulamayı kapatın ve doğru SD kartı takın</string>
     <string name="option_storage_select">“%1$s” kullan</string>
     <string name="lbl_storage_settings">Depolama</string>
-    <string name="lbl_storage_volume">Depolama hacmi</string>
+    <string name="pt_storage_volume">Depolama hacmi</string>
     <string
-        name="lbl_story_in_multiple_books">“%1$s” birden fazla kitapta mevcuttur:\n\n%2$s</string>
+        name="info_story_in_multiple_books">“%1$s” birden fazla kitapta mevcuttur:\n\n%2$s</string>
     <string name="option_isbn_strict">Sıkı ISBN</string>
     <string name="lbl_style">Stil</string>
     <string name="lbl_styles">Stilleri</string>
@@ -519,7 +519,7 @@
     <string name="pe_ui_theme_day_night">Gündüz / Gece</string>
     <string name="pe_ui_theme_light">ışık</string>
     <string name="pt_barcode_scanner">Barkod okuyucu</string>
-    <string name="pg_bob_show_details">Listede gösterilen Kitap Detayları</string>
+    <string name="pt_bob_show_details">Listede gösterilen Kitap Detayları</string>
     <string name="pc_bob">Kitap listeleri</string>
     <string name="lbl_filters">Kitap süzgeçleri</string>
     <string name="pc_image_cache">Görüntüler önbelleği</string>
@@ -528,7 +528,7 @@
     <string name="pt_field_visibility">Alan görünürlüğünü yönet</string>
     <string name="preference_not_set">Ayarlanmadı</string>
     <string name="info_backup_successful">Yedekleme başarılı!</string>
-    <string name="progress_end_download_successful">İndirme başarılı</string>
+    <string name="info_download_successful">İndirme başarılı</string>
     <string name="info_export_report">%2$s adında bir %3$s dosyası SD kartınızın “%1$s” dizininde oluşturuldu.\n\nBu dosyayı el ile başka bir yere yedeklemeniz aygıtınızın hasar görmesi, kaybolması veya çalınması durumunda verilerinizin korunması için tavsiye edilir.</string>
     <string name="info_export_successful">İhracat başarılı</string>
     <string name="info_import_complete">İçe aktarma başarılı</string>
@@ -584,14 +584,14 @@
     <string name="pt_ui_system_locale">Sistem Yerel Ayarı</string>
     <string name="pt_ui_theme">Tema</string>
     <string name="pt_website_search_order_and_enable">Yeniden sırala, etkinleştir ve devre dışı bırak</string>
-    <string name="pv_author_name_family_first">Örneğin “Nesin, Aziz”</string>
-    <string name="pv_author_name_given_first">Örneğin “Aziz Nesin”</string>
-    <string name="pv_bob_books_under_multiple_each_author">Her yazar altında</string>
-    <string name="pv_bob_books_under_multiple_each_publisher">her yayıncının altında.</string>
-    <string name="pv_bob_books_under_multiple_each_series">Her dizi altında</string>
-    <string name="pv_bob_books_under_multiple_primary_author_only">Yalnızca birincil yazar altında</string>
-    <string name="pv_bob_books_under_multiple_primary_publisher_only">yalnızca birincil yayıncıları altında.</string>
-    <string name="pv_bob_books_under_multiple_primary_series_only">Yalnızca birincil dizi altında</string>
+    <string name="ps_author_name_family_first">Örneğin “Nesin, Aziz”</string>
+    <string name="ps_author_name_given_first">Örneğin “Aziz Nesin”</string>
+    <string name="ps_bob_books_under_multiple_each_author">Her yazar altında</string>
+    <string name="ps_bob_books_under_multiple_each_publisher">her yayıncının altında.</string>
+    <string name="ps_bob_books_under_multiple_each_series">Her dizi altında</string>
+    <string name="ps_bob_books_under_multiple_primary_author_only">Yalnızca birincil yazar altında</string>
+    <string name="ps_bob_books_under_multiple_primary_publisher_only">yalnızca birincil yayıncıları altında.</string>
+    <string name="ps_bob_books_under_multiple_primary_series_only">Yalnızca birincil dizi altında</string>
     <string name="pv_bob_header_filters">Kitap süzgeçleri</string>
     <string name="pv_bob_header_nr_of_books">Kitap sayısını göster</string>
     <string name="pv_bob_header_style_name">Stil adı</string>
@@ -629,20 +629,20 @@
     <string name="tip_series_book_may_appear_more_than_once">Eğer her bir seride gösteriliyorsa, tek bir kitap bir dizelgede birden fazla görünebilir. Böyle bir durumda bu kitaplardan birini silmek dizelgeden tüm girileri silecektir.</string>
     <string name="tip_update_fields_from_internet">Dış site bağlantıları yalnızca siteyle gerçekten iletişime geçildiyse işlenir. Sonuç olarak, “Üzerinde görüntülemek…” menüsü de aynı şekilde neyin uygun olduğunu gösterecektir.</string>
     <string name="tip_view_only_help">Sağa/sola kaydırarak diğer kitaplara geçebilir.</string>
-    <string name="txt_cleanup_files">Temizlenebilir dosyalar şu anda SD kartta %1$s kullanmaktadır. Her güncellemenizde, her veritabanı yedeklemenizde veya her uygulamanın çökmesinde günlük dosyaları ve diğer veriler SD kartta saklanır. Bu bilgileri temizlemek için aşağıdaki düğmeye dokunun. Eğer çökmeler veya başka sorunlar yaşıyorsanız öncelikle “%2$s” düğmesini kullanmayı deneyin.</string>
-    <string name="txt_displaying_n_books_in_m_entries">%2$d giride %1$d kitap</string>
-    <string name="txt_export_backup_all">Tüm kitaplar, kapaklar, ayarlar ve kişiselleştirilmiş biçemler arşive aktarılacaktır.</string>
-    <string name="txt_export_books_option_since_last_full_backup">Son tüm yedeklemeden bu yana eklenen veya güncellenen kitaplar</string>
+    <string name="info_cleanup_files">Temizlenebilir dosyalar şu anda SD kartta %1$s kullanmaktadır. Her güncellemenizde, her veritabanı yedeklemenizde veya her uygulamanın çökmesinde günlük dosyaları ve diğer veriler SD kartta saklanır. Bu bilgileri temizlemek için aşağıdaki düğmeye dokunun. Eğer çökmeler veya başka sorunlar yaşıyorsanız öncelikle “%2$s” düğmesini kullanmayı deneyin.</string>
+    <string name="info_displaying_n_books_in_m_entries">%2$d giride %1$d kitap</string>
+    <string name="info_export_backup_all">Tüm kitaplar, kapaklar, ayarlar ve kişiselleştirilmiş biçemler arşive aktarılacaktır.</string>
+    <string name="info_export_books_option_since_last_full_backup">Son tüm yedeklemeden bu yana eklenen veya güncellenen kitaplar</string>
     <string name="option_info_import_books_option_all">Yeni kitapları içe aktarın ve mevcut kitapların üzerine yazın. Bunu bir yedeği geri yüklemek için kullanın.</string>
     <string name="option_info_import_books_option_new_and_updated">Yeni kitapları içe aktarın ve mevcut kitapları son değişiklik tarihlerine göre senkronize edin.</string>
     <string name="option_info_import_books_option_new_only">Yalnızca yeni kitapları içe aktarın. Mevcut kitaplara yapılan herhangi bir güncelleme göz ardı edilecektir.</string>
     <string name="ps_manage_fields">Seçili alanlar kitap ekle/düzenle ekranlarında görünecektir. Seçilmeyen alanlar gizli kalacaktır.</string>
-    <string name="txt_rebuild_scheduled">Yeniden planlandı</string>
-    <string name="txt_select_fields_to_update">Seçilen alanlar İnternet\'ten güncellenecektir. Seçilmeyen alanlar değiştirilmeden kalacaktır.</string>
-    <string name="txt_share_book_im_reading">“%1$s” %2$s yazısını %3$s %4$s okuyorum</string>
-    <string name="txt_tap_on_image_to_select">Seçmek için daha büyük resme dokunun.</string>
-    <string name="txt_tap_on_thumbnail_to_zoom">Daha büyük bir görüntü görüntülemek için bir küçük resme dokunun.</string>
-    <string name="txt_x_pages">%1$d bet</string>
+    <string name="info_rebuild_scheduled">Yeniden planlandı</string>
+    <string name="info_select_fields_to_update">Seçilen alanlar İnternet\'ten güncellenecektir. Seçilmeyen alanlar değiştirilmeden kalacaktır.</string>
+    <string name="info_share_book_im_reading">“%1$s” %2$s yazısını %3$s %4$s okuyorum</string>
+    <string name="info_tap_on_image_to_select">Seçmek için daha büyük resme dokunun.</string>
+    <string name="info_tap_on_thumbnail_to_zoom">Daha büyük bir görüntü görüntülemek için bir küçük resme dokunun.</string>
+    <string name="info_x_pages">%1$d bet</string>
     <string name="unknown">Bilinmiyor</string>
     <string name="unknown_author">[Bilinmeyen Yazar]</string>
     <string name="unknown_title">[Bilinmeyen başlık]</string>
@@ -690,7 +690,7 @@
     <string name="whichViewApplication">Şununla aç:</string>
     <string name="x_of_y">%1$d (Toplam %2$d)</string>
     <string name="yes">Evet</string>
-    <string name="lbl_story_in_single_book">“%1$s” tek bir kitapta mevcut:\n\n%2$s</string>
+    <string name="info_story_in_single_book">“%1$s” tek bir kitapta mevcut:\n\n%2$s</string>
     <string name="tip_import_isbn_list">ISBN numaralarına sahip bir metin dosyasını içe aktarın. Dosyanın her satırında tek bir ISBN olmalıdır. Sonuçlar sıraya konulacaktır.</string>
     <string name="lbl_date_added">Eklenen günay</string>
 
