--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -144,8 +144,8 @@
     <string name="action_email">Enviar correo</string>
     <string name="btn_just_this_shelf">Esta estantería solamente</string>
     <string name="action_learn_more">Más información</string>
-    <string name="btn_less_ellipsis">Menos…</string>
-    <string name="btn_more_ellipsis">Más…</string>
+    <string name="action_less_ellipsis">Menos…</string>
+    <string name="action_more_ellipsis">Más…</string>
     <string name="action_show_options">Opciones</string>
     <string name="action_show_toc_long">Mostrar tabla de contenido</string>
     <string name="action_start_export">Iniciar exportación</string>
@@ -284,13 +284,13 @@
     <string name="lbl_backup">Copia de seguridad</string>
     <string name="lbl_barcode">Código de barras</string>
     <string name="lbl_book">Libro</string>
-    <string name="lbl_book_detail_screen">Página de detalles del libro</string>
+    <string name="pc_book_detail_screen">Página de detalles del libro</string>
     <string name="lbl_book_type">tipo de libro</string>
     <string name="lbl_books">Libros</string>
     <string name="lbl_bookshelf">Biblioteca</string>
     <string name="lbl_bookshelves">Bibliotecas</string>
     <string name="lbl_calibre_content_server">Servidor de contenido de Calibre</string>
-    <string name="lbl_calibre_content_server_extension_info">La extensión del servidor de contenido de Calibre no está instalada.</string>
+    <string name="info_calibre_content_server_extension">La extensión del servidor de contenido de Calibre no está instalada.</string>
     <string name="lbl_certificate_ca">Certificado de CA</string>
     <string name="lbl_certificates">Certificados</string>
     <string name="X_lbl_clear_filters">Borrar filtros</string>
@@ -327,7 +327,7 @@
     <string name="lbl_details_have_changed">Detalles modificados</string>
     <string name="lbl_duplicate_book">Libro duplicado</string>
     <string name="lbl_dust_cover">Sobrecubierta</string>
-    <string name="lbl_edit_settings">Editar configuración</string>
+    <string name="option_storage_edit_settings">Editar configuración</string>
     <string name="lbl_edit_style">Editar estilo</string>
     <string name="lbl_edition">Edición</string>
     <string name="lbl_edition_book_club">Edición del club de libros</string>
@@ -419,11 +419,11 @@
     <string name="option_sort_and_style_ellipsis">Estilo de &amp; ordenación…</string>
     <string name="lbl_sorting">Clasificación</string>
     <string name="lbl_sql_query">consulta SQL</string>
-    <string name="lbl_storage_quit_and_reinsert_sdcard">Cierre la aplicación e inserte la tarjeta SD correcta</string>
+    <string name="option_storage_quit_and_reinsert_sdcard">Cierre la aplicación e inserte la tarjeta SD correcta</string>
     <string name="option_storage_select">Utilice «%1$s»</string>
     <string name="lbl_storage_settings">Almacenamiento</string>
-    <string name="lbl_storage_volume">Volumen de almacenamiento</string>
-    <string name="lbl_story_in_multiple_books">«%1$s» está presente en múltiples libros:\n\n%2$s</string>
+    <string name="pt_storage_volume">Volumen de almacenamiento</string>
+    <string name="info_story_in_multiple_books">«%1$s» está presente en múltiples libros:\n\n%2$s</string>
     <string name="option_isbn_strict">ISBN estricto</string>
     <string name="lbl_style">Estilo</string>
     <string name="lbl_styles">Estilos</string>
@@ -515,7 +515,7 @@
     <string name="pe_ui_theme_day_night">Día / Noche</string>
     <string name="pe_ui_theme_light">Luz</string>
     <string name="pt_barcode_scanner">Escáner de código de barras</string>
-    <string name="pg_bob_show_details">Detalles del libro que se muestran en la lista</string>
+    <string name="pt_bob_show_details">Detalles del libro que se muestran en la lista</string>
     <string name="pc_bob">Listas de libros</string>
     <string name="lbl_filters">Filtros adicionales</string>
     <string name="pc_image_cache">Caché de imágenes</string>
@@ -524,7 +524,7 @@
     <string name="pt_field_visibility">Visibilidad de campos</string>
     <string name="preference_not_set">Sin definir</string>
     <string name="info_backup_successful">Copia de seguridad correcta</string>
-    <string name="progress_end_download_successful">Descarga exitosa</string>
+    <string name="info_download_successful">Descarga exitosa</string>
     <string name="info_export_report">Se ha creado un fichero de %3$s llamado %2$s en el directorio «%1$s».\n\nDebe copiarlo a otro lugar para proteger los datos en caso de que su dispositivo resulte dañado, se pierda o sea robado.</string>
     <string name="info_export_successful">Exportación exitosa</string>
     <string name="info_import_complete">Importación finalizada</string>
@@ -582,14 +582,14 @@
     <string name="pt_ui_system_locale">Sistema local</string>
     <string name="pt_ui_theme">El tema</string>
     <string name="pt_website_search_order_and_enable">Reordenar, habilitar y deshabilitar</string>
-    <string name="pv_author_name_family_first">por ejemplo «Pérez Galdós, Benito»</string>
-    <string name="pv_author_name_given_first">por ejemplo «Benito Pérez Galdós»</string>
-    <string name="pv_bob_books_under_multiple_each_author">Bajo cada autorр</string>
-    <string name="pv_bob_books_under_multiple_each_publisher">debajo de cada editor.</string>
-    <string name="pv_bob_books_under_multiple_each_series">Bajo cada serie</string>
-    <string name="pv_bob_books_under_multiple_primary_author_only">Sólo bajo primer autor</string>
-    <string name="pv_bob_books_under_multiple_primary_publisher_only">solo bajo su editor principal.</string>
-    <string name="pv_bob_books_under_multiple_primary_series_only">Sólo bajo primer serie</string>
+    <string name="ps_author_name_family_first">por ejemplo «Pérez Galdós, Benito»</string>
+    <string name="ps_author_name_given_first">por ejemplo «Benito Pérez Galdós»</string>
+    <string name="ps_bob_books_under_multiple_each_author">Bajo cada autorр</string>
+    <string name="ps_bob_books_under_multiple_each_publisher">debajo de cada editor.</string>
+    <string name="ps_bob_books_under_multiple_each_series">Bajo cada serie</string>
+    <string name="ps_bob_books_under_multiple_primary_author_only">Sólo bajo primer autor</string>
+    <string name="ps_bob_books_under_multiple_primary_publisher_only">solo bajo su editor principal.</string>
+    <string name="ps_bob_books_under_multiple_primary_series_only">Sólo bajo primer serie</string>
     <string name="pv_bob_header_filters">Filtros adicionales</string>
     <string name="pv_bob_header_nr_of_books">Mostrar el número de libros</string>
     <string name="pv_bob_header_style_name">Nombre de estilo</string>
@@ -627,20 +627,20 @@
     <string name="tip_series_book_may_appear_more_than_once">Si se muestra en cada serie, un mismo libro puede aparecer más de una vez en un listado. En ese caso, si se elimina uno de esos libros se eliminará de todas las posiciones del listado.</string>
     <string name="tip_update_fields_from_internet">Los enlaces externos del sitio solo se procesan si se contacta realmente con el sitio. Como resultado, el menú «Ver en…» solo mostrará lo que está disponible.</string>
     <string name="tip_view_only_help">Puede deslizar la pantalla a derecha o izquierda para ver otros libros.</string>
-    <string name="txt_cleanup_files">Los ficheros que se pueden eliminar ocupan %1$s en la tarjeta SD. Cada vez que se actualiza la versión de &APP_NAME;, al hacer una copia de seguridad o cuando falla la aplicación se crean ficheros de registro en la tarjeta SD. Pulse el botón siguiente para eliminarlos. Si ha detectado algún error, le agradeceremos que utilice primero la opción de «%2$s».</string>
-    <string name="txt_displaying_n_books_in_m_entries">%1$d libros, en %2$d entradas</string>
-    <string name="txt_export_backup_all">Se exportarán al fichero todos los libros, portadas, configuraciones y estilos personalizados.</string>
-    <string name="txt_export_books_option_since_last_full_backup">Todos los libros añadidos o actualizados desde la última copia de seguridad completa</string>
+    <string name="info_cleanup_files">Los ficheros que se pueden eliminar ocupan %1$s en la tarjeta SD. Cada vez que se actualiza la versión de &APP_NAME;, al hacer una copia de seguridad o cuando falla la aplicación se crean ficheros de registro en la tarjeta SD. Pulse el botón siguiente para eliminarlos. Si ha detectado algún error, le agradeceremos que utilice primero la opción de «%2$s».</string>
+    <string name="info_displaying_n_books_in_m_entries">%1$d libros, en %2$d entradas</string>
+    <string name="info_export_backup_all">Se exportarán al fichero todos los libros, portadas, configuraciones y estilos personalizados.</string>
+    <string name="info_export_books_option_since_last_full_backup">Todos los libros añadidos o actualizados desde la última copia de seguridad completa</string>
     <string name="option_info_import_books_option_all">Importe libros nuevos y sobrescriba los libros existentes. Use esto para restaurar una copia de seguridad.</string>
     <string name="option_info_import_books_option_new_and_updated">Importe libros nuevos y sincronice los libros existentes en función de su última fecha de modificación.</string>
     <string name="option_info_import_books_option_new_only">Importa solo libros nuevos. Se ignorarán las actualizaciones de los libros existentes.</string>
     <string name="ps_manage_fields">Los campos marcados serán visibles en las pantallas de Añadir y Editar libros. Los no marcados no se mostrarán.</string>
-    <string name="txt_rebuild_scheduled">Reconstrucción programada</string>
-    <string name="txt_select_fields_to_update">Los campos seleccionados se actualizarán con datos de internet. Los campos no marcados no se modificarán.</string>
-    <string name="txt_share_book_im_reading">Estoy leyendo «%1$s» %2$s por %3$s %4$s</string>
-    <string name="txt_tap_on_image_to_select">Toque la imagen más grande para seleccionarla.</string>
-    <string name="txt_tap_on_thumbnail_to_zoom">Toque una miniatura para mostrar una imagen más grande.</string>
-    <string name="txt_x_pages">%1$d páginas</string>
+    <string name="info_rebuild_scheduled">Reconstrucción programada</string>
+    <string name="info_select_fields_to_update">Los campos seleccionados se actualizarán con datos de internet. Los campos no marcados no se modificarán.</string>
+    <string name="info_share_book_im_reading">Estoy leyendo «%1$s» %2$s por %3$s %4$s</string>
+    <string name="info_tap_on_image_to_select">Toque la imagen más grande para seleccionarla.</string>
+    <string name="info_tap_on_thumbnail_to_zoom">Toque una miniatura para mostrar una imagen más grande.</string>
+    <string name="info_x_pages">%1$d páginas</string>
     <string name="unknown">Desconocido</string>
     <string name="unknown_author">[Autor desconocido]</string>
     <string name="unknown_title">[Título desconocido]</string>
@@ -688,7 +688,7 @@
     <string name="whichViewApplication">Abrir con</string>
     <string name="x_of_y">%1$d de %2$d</string>
     <string name="yes">Sí</string>
-    <string name="lbl_story_in_single_book">«%1$s» está presente en un solo libro:\n\n%2$s</string>
+    <string name="info_story_in_single_book">«%1$s» está presente en un solo libro:\n\n%2$s</string>
     <string name="tip_import_isbn_list">Importa un archivo de texto con números ISBN. El archivo debe tener un solo ISBN en cada línea. Los resultados se colocarán en la cola.</string>
     <string name="lbl_date_added">Fecha de inclusión</string>
 
