--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -144,8 +144,8 @@
     <string name="action_email">Wyślij e-maila</string>
     <string name="btn_just_this_shelf">Tylko ta półka</string>
     <string name="action_learn_more">Więcej informacji</string>
-    <string name="btn_less_ellipsis">Mniej…</string>
-    <string name="btn_more_ellipsis">Więcej…</string>
+    <string name="action_less_ellipsis">Mniej…</string>
+    <string name="action_more_ellipsis">Więcej…</string>
     <string name="action_show_options">Opcje</string>
     <string name="action_show_toc_long">Pokaż spis treści</string>
     <string name="action_start_export">Rozpocznij eksport</string>
@@ -284,13 +284,13 @@
     <string name="lbl_backup">Kopia zapasowa</string>
     <string name="lbl_barcode">kod kreskowy</string>
     <string name="lbl_book">Książka</string>
-    <string name="lbl_book_detail_screen">Strona ze szczegółami książki</string>
+    <string name="pc_book_detail_screen">Strona ze szczegółami książki</string>
     <string name="lbl_book_type">Typ książki</string>
     <string name="lbl_books">Książki</string>
     <string name="lbl_bookshelf">Półka</string>
     <string name="lbl_bookshelves">Wybierz półki</string>
     <string name="lbl_calibre_content_server">Serwer zawartości Calibre</string>
-    <string name="lbl_calibre_content_server_extension_info">Rozszerzenie serwera treści Calibre nie jest zainstalowane.</string>
+    <string name="info_calibre_content_server_extension">Rozszerzenie serwera treści Calibre nie jest zainstalowane.</string>
     <string name="lbl_certificate_ca">Certyfikat urzędu certyfikacji</string>
     <string name="lbl_certificates">Certyfikaty</string>
     <string name="X_lbl_clear_filters">Wyczyść filtry</string>
@@ -327,7 +327,7 @@
     <string name="lbl_details_have_changed">Szczegóły uległy zmianie</string>
     <string name="lbl_duplicate_book">Duplikuj książkę</string>
     <string name="lbl_dust_cover">Kurtka przeciwpyłowa</string>
-    <string name="lbl_edit_settings">Edytuj ustawienia</string>
+    <string name="option_storage_edit_settings">Edytuj ustawienia</string>
     <string name="lbl_edit_style">Edytuj styl</string>
     <string name="lbl_edition">Wydanie</string>
     <string name="lbl_edition_book_club">Klub Książki</string>
@@ -419,11 +419,11 @@
     <string name="option_sort_and_style_ellipsis">Sortuj i styl…</string>
     <string name="lbl_sorting">Sortowanie</string>
     <string name="lbl_sql_query">Zapytanie SQL</string>
-    <string name="lbl_storage_quit_and_reinsert_sdcard">Zamknij aplikację i włóż właściwą kartę SD</string>
+    <string name="option_storage_quit_and_reinsert_sdcard">Zamknij aplikację i włóż właściwą kartę SD</string>
     <string name="option_storage_select">Użyj „%1$s”</string>
     <string name="lbl_storage_settings">Pamięć wewnętrzna</string>
-    <string name="lbl_storage_volume">Pojemność pamięci</string>
-    <string name="lbl_story_in_multiple_books">„%1$s” jest obecna w wielu książkach:\n\n%2$s</string>
+    <string name="pt_storage_volume">Pojemność pamięci</string>
+    <string name="info_story_in_multiple_books">„%1$s” jest obecna w wielu książkach:\n\n%2$s</string>
     <string name="option_isbn_strict">Ścisły ISBN</string>
     <string name="lbl_style">Styl</string>
     <string name="lbl_styles">Style</string>
@@ -515,7 +515,7 @@
     <string name="pe_ui_theme_day_night">Dzień / Noc</string>
     <string name="pe_ui_theme_light">Światło</string>
     <string name="pt_barcode_scanner">Skaner kodów kreskowych</string>
-    <string name="pg_bob_show_details">Szczegóły książki pokazane na liście</string>
+    <string name="pt_bob_show_details">Szczegóły książki pokazane na liście</string>
     <string name="pc_bob">Listy książek</string>
     <string name="lbl_filters">Filtry</string>
     <string name="pc_image_cache">Pamięć podręczna zdjęć</string>
@@ -524,7 +524,7 @@
     <string name="pt_field_visibility">Dostosuj widoczność pól</string>
     <string name="preference_not_set">Nie ustawiono</string>
     <string name="info_backup_successful">Резервное копирование выполнено успешно</string>
-    <string name="progress_end_download_successful">Pobieranie powiodło się</string>
+    <string name="info_download_successful">Pobieranie powiodło się</string>
     <string name="info_export_report">Plik %3$s o nazwie „%2$s” został utworzony w katalogu „%1$s” i powinieneś ręcznie skopiować go gdzie indziej, aby chronić dane w przypadku uszkodzenia, utraty lub kradzieży.</string>
     <string name="info_export_successful">Eksport powiódł się</string>
     <string name="info_import_complete">Import zakończony</string>
@@ -580,14 +580,14 @@
     <string name="pt_ui_system_locale">Ustawienia regionalne systemu</string>
     <string name="pt_ui_theme">Motyw</string>
     <string name="pt_website_search_order_and_enable">Zmień kolejność, włącz i wyłącz</string>
-    <string name="pv_author_name_family_first">np. „Lem, Stanisław”</string>
-    <string name="pv_author_name_given_first">np. „Stanisław Lem”</string>
-    <string name="pv_bob_books_under_multiple_each_author">Pod każdym autor</string>
-    <string name="pv_bob_books_under_multiple_each_publisher">pod każdym wydawcą.</string>
-    <string name="pv_bob_books_under_multiple_each_series">Pod każdym seria</string>
-    <string name="pv_bob_books_under_multiple_primary_author_only">Pod głównym tylko autor</string>
-    <string name="pv_bob_books_under_multiple_primary_publisher_only">tylko u głównego wydawcy.</string>
-    <string name="pv_bob_books_under_multiple_primary_series_only">Pod głównym tylko seria</string>
+    <string name="ps_author_name_family_first">np. „Lem, Stanisław”</string>
+    <string name="ps_author_name_given_first">np. „Stanisław Lem”</string>
+    <string name="ps_bob_books_under_multiple_each_author">Pod każdym autor</string>
+    <string name="ps_bob_books_under_multiple_each_publisher">pod każdym wydawcą.</string>
+    <string name="ps_bob_books_under_multiple_each_series">Pod każdym seria</string>
+    <string name="ps_bob_books_under_multiple_primary_author_only">Pod głównym tylko autor</string>
+    <string name="ps_bob_books_under_multiple_primary_publisher_only">tylko u głównego wydawcy.</string>
+    <string name="ps_bob_books_under_multiple_primary_series_only">Pod głównym tylko seria</string>
     <string name="pv_bob_header_filters">Filtry</string>
     <string name="pv_bob_header_nr_of_books">Liczba książek</string>
     <string name="pv_bob_header_style_name">Nazwa stylu</string>
@@ -625,20 +625,20 @@
     <string name="tip_series_book_may_appear_more_than_once">Jeśli jest wyświetlana w każdej serii, pojedyncza książka może pojawić się więcej niż raz na liście. W takim przypadku usunięcie jednej z tych książek spowoduje usunięcie wszystkich instancji z listy.</string>
     <string name="tip_update_fields_from_internet">Linki do zewnętrznych stron są przetwarzane tylko wtedy, gdy rzeczywiście nawiązano kontakt ze stroną. W rezultacie menu „Widok na……” pokaże tylko to, co jest dostępne.</string>
     <string name="tip_view_only_help">Możesz przesuwać palcem w lewo lub w prawo, aby przejść do innych książek.</string>
-    <string name="txt_cleanup_files">Pliki pomocnicze możliwe do usunięcia zajmują %1$s na karcie SD. Logi i inne dane są zapisywane przy każdej aktualizacji, kopii danych i gdy program odmówi posłuszeństwa. Kliknij w przycisk poniżej by usunąć te pliki z karty SD. Jeśli pojawiają się problemy i program działa nieprawidłowo, rozważ wysłanie informacji do programistów - kliknij „%2$s” najpierw.</string>
-    <string name="txt_displaying_n_books_in_m_entries">%1$d książek, w %2$d wpisów</string>
-    <string name="txt_export_backup_all">Wszystkie książki, okładki, preferencje i niestandardowe style zostaną wyeksportowane do archiwum.</string>
-    <string name="txt_export_books_option_since_last_full_backup">Wszystkie książki dodane lub zaktualizowane od ostatniej pełnej kopii zapasowej.</string>
+    <string name="info_cleanup_files">Pliki pomocnicze możliwe do usunięcia zajmują %1$s na karcie SD. Logi i inne dane są zapisywane przy każdej aktualizacji, kopii danych i gdy program odmówi posłuszeństwa. Kliknij w przycisk poniżej by usunąć te pliki z karty SD. Jeśli pojawiają się problemy i program działa nieprawidłowo, rozważ wysłanie informacji do programistów - kliknij „%2$s” najpierw.</string>
+    <string name="info_displaying_n_books_in_m_entries">%1$d książek, w %2$d wpisów</string>
+    <string name="info_export_backup_all">Wszystkie książki, okładki, preferencje i niestandardowe style zostaną wyeksportowane do archiwum.</string>
+    <string name="info_export_books_option_since_last_full_backup">Wszystkie książki dodane lub zaktualizowane od ostatniej pełnej kopii zapasowej.</string>
     <string name="option_info_import_books_option_all">Importuj nowe książki i nadpisz istniejące książki. Użyj tego do przywrócenia kopii zapasowej.</string>
     <string name="option_info_import_books_option_new_and_updated">Importuj nowe książki i synchronizuj istniejące książki na podstawie daty ich ostatniej modyfikacji.</string>
     <string name="option_info_import_books_option_new_only">Importuj tylko nowe książki. Wszelkie aktualizacje istniejących książek będą ignorowane.</string>
     <string name="ps_manage_fields">Wybrane pola są widoczne na ekranach dodawania i edycji książki. Pozostałe są ukryte.</string>
-    <string name="txt_rebuild_scheduled">Przebudowano zaplanowano</string>
-    <string name="txt_select_fields_to_update">Wybrane pola będą zaktualizowane wg danych z sieci. Pozostałe nie zostaną zmienione.</string>
-    <string name="txt_share_book_im_reading">Czytam „%1$s” %2$s przez %3$s %4$s</string>
-    <string name="txt_tap_on_image_to_select">Dotknij większego obrazu, aby go wybrać.</string>
-    <string name="txt_tap_on_thumbnail_to_zoom">Dotknij miniatury, aby wyświetlić większy obraz.</string>
-    <string name="txt_x_pages">%1$d stron</string>
+    <string name="info_rebuild_scheduled">Przebudowano zaplanowano</string>
+    <string name="info_select_fields_to_update">Wybrane pola będą zaktualizowane wg danych z sieci. Pozostałe nie zostaną zmienione.</string>
+    <string name="info_share_book_im_reading">Czytam „%1$s” %2$s przez %3$s %4$s</string>
+    <string name="info_tap_on_image_to_select">Dotknij większego obrazu, aby go wybrać.</string>
+    <string name="info_tap_on_thumbnail_to_zoom">Dotknij miniatury, aby wyświetlić większy obraz.</string>
+    <string name="info_x_pages">%1$d stron</string>
     <string name="unknown">Brak informacji</string>
     <string name="unknown_author">[Nieznany autor]</string>
     <string name="unknown_title">[Nieznany tytuł]</string>
@@ -686,7 +686,7 @@
     <string name="whichViewApplication">Otwórz w aplikacji</string>
     <string name="x_of_y">%1$d z %2$d</string>
     <string name="yes">Tak</string>
-    <string name="lbl_story_in_single_book">„%1$s” występuje w jednej książce:\n\n%2$s</string>
+    <string name="info_story_in_single_book">„%1$s” występuje w jednej książce:\n\n%2$s</string>
     <string name="tip_import_isbn_list">Zaimportuj plik tekstowy z numerami ISBN. Plik powinien mieć jeden numer ISBN w każdym wierszu. Wyniki zostaną umieszczone w kolejce.</string>
     <string name="lbl_date_added">Data dodania</string>
 
